efeito bg, aprimoração

--- a/css/bgindex.css
+++ b/css/bgindex.css
@@ -4,6 +4,7 @@ pra manter o sistema organizado*/
 :root {
   --color-white: #fff;
   --color-transp: #ffffff00;
+  --color-light: #f8f9fa;
 }
 
 @-webkit-keyframes written_tex {
@@ -164,7 +165,7 @@ body {
 }
 
 .star {
-  --star-color: var(--light-color);
+  --star-color: var(--color-light);
   --star-tail-length: 6em;
   --star-tail-height: 2px;
   --star-width: calc(var(--star-tail-length) / 6);
@@ -175,7 +176,7 @@ body {
   left: 0;
   width: var(--star-tail-length);
   height: var(--star-tail-height);
-  color: var(--star-color);
+  color: #f8f9fa;
   background: linear-gradient(45deg, currentColor, transparent);
   border-radius: 50%;
   filter: drop-shadow(0 0 6px currentColor);
@@ -190,304 +191,304 @@ body {
   }
 }
 .star:nth-child(1) {
-  --star-tail-length: 5.25em;
-  --top-offset: 76.41vh;
-  --fall-duration: 9.231s;
-  --fall-delay: 5.001s;
+  --star-tail-length: 6.09em;
+  --top-offset: 46.26vh;
+  --fall-duration: 7.933s;
+  --fall-delay: 9.727s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 7.06em;
-  --top-offset: 31.1vh;
-  --fall-duration: 6.929s;
-  --fall-delay: 4.136s;
+  --star-tail-length: 5.24em;
+  --top-offset: 25.2vh;
+  --fall-duration: 11.023s;
+  --fall-delay: 6.583s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 6.8em;
-  --top-offset: 28.91vh;
-  --fall-duration: 9.458s;
-  --fall-delay: 0.138s;
+  --star-tail-length: 6.14em;
+  --top-offset: 72.15vh;
+  --fall-duration: 8.606s;
+  --fall-delay: 3.097s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 7.02em;
-  --top-offset: 31.38vh;
-  --fall-duration: 8.579s;
-  --fall-delay: 8.786s;
+  --star-tail-length: 5.96em;
+  --top-offset: 24.16vh;
+  --fall-duration: 8.472s;
+  --fall-delay: 9.796s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 7.19em;
-  --top-offset: 77.1vh;
-  --fall-duration: 11.743s;
-  --fall-delay: 2.667s;
+  --star-tail-length: 6.82em;
+  --top-offset: 43.91vh;
+  --fall-duration: 6.973s;
+  --fall-delay: 8.292s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 7.26em;
-  --top-offset: 59.43vh;
-  --fall-duration: 8.356s;
-  --fall-delay: 6.102s;
+  --star-tail-length: 6.5em;
+  --top-offset: 96.58vh;
+  --fall-duration: 9.154s;
+  --fall-delay: 4.126s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 7.32em;
-  --top-offset: 15.07vh;
-  --fall-duration: 10.289s;
-  --fall-delay: 1.698s;
+  --star-tail-length: 6.11em;
+  --top-offset: 51.91vh;
+  --fall-duration: 6.616s;
+  --fall-delay: 8.224s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 7.15em;
-  --top-offset: 47.61vh;
-  --fall-duration: 8.591s;
-  --fall-delay: 4.329s;
+  --star-tail-length: 6.92em;
+  --top-offset: 81.69vh;
+  --fall-duration: 9.02s;
+  --fall-delay: 6.19s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 5.35em;
-  --top-offset: 44.47vh;
-  --fall-duration: 9.532s;
-  --fall-delay: 7.012s;
+  --star-tail-length: 5.12em;
+  --top-offset: 98.56vh;
+  --fall-duration: 9.823s;
+  --fall-delay: 7.26s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 6.65em;
-  --top-offset: 1.02vh;
-  --fall-duration: 10.58s;
-  --fall-delay: 1.357s;
+  --star-tail-length: 5.29em;
+  --top-offset: 40.8vh;
+  --fall-duration: 8.442s;
+  --fall-delay: 0.643s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 6.91em;
-  --top-offset: 18.76vh;
-  --fall-duration: 7.634s;
-  --fall-delay: 4.607s;
+  --star-tail-length: 5.67em;
+  --top-offset: 66.13vh;
+  --fall-duration: 10.482s;
+  --fall-delay: 9.879s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 6.86em;
-  --top-offset: 8.84vh;
-  --fall-duration: 9.384s;
-  --fall-delay: 8.889s;
+  --star-tail-length: 5.3em;
+  --top-offset: 0.07vh;
+  --fall-duration: 7.77s;
+  --fall-delay: 1.77s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.84em;
-  --top-offset: 31.24vh;
-  --fall-duration: 7.907s;
-  --fall-delay: 0.508s;
+  --star-tail-length: 6.05em;
+  --top-offset: 71.57vh;
+  --fall-duration: 10.621s;
+  --fall-delay: 5.526s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 6.09em;
-  --top-offset: 21.52vh;
-  --fall-duration: 11.165s;
-  --fall-delay: 0.797s;
+  --star-tail-length: 6.84em;
+  --top-offset: 28.66vh;
+  --fall-duration: 9.207s;
+  --fall-delay: 0.723s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 7.11em;
-  --top-offset: 36.79vh;
-  --fall-duration: 9.65s;
-  --fall-delay: 4.31s;
+  --star-tail-length: 5.74em;
+  --top-offset: 77.83vh;
+  --fall-duration: 6.927s;
+  --fall-delay: 6.71s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 5.68em;
-  --top-offset: 7.77vh;
-  --fall-duration: 10.103s;
-  --fall-delay: 1.605s;
+  --star-tail-length: 7.2em;
+  --top-offset: 56.81vh;
+  --fall-duration: 6.501s;
+  --fall-delay: 6.152s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 6.76em;
-  --top-offset: 0.51vh;
-  --fall-duration: 8.64s;
-  --fall-delay: 6.842s;
+  --star-tail-length: 7.08em;
+  --top-offset: 56.12vh;
+  --fall-duration: 9.634s;
+  --fall-delay: 1.22s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 6.07em;
-  --top-offset: 13.12vh;
-  --fall-duration: 11.185s;
-  --fall-delay: 6.913s;
+  --star-tail-length: 6.56em;
+  --top-offset: 76.55vh;
+  --fall-duration: 9.383s;
+  --fall-delay: 3.731s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 7.29em;
-  --top-offset: 98.63vh;
-  --fall-duration: 7.792s;
-  --fall-delay: 4.37s;
+  --star-tail-length: 6.29em;
+  --top-offset: 59.79vh;
+  --fall-duration: 6.011s;
+  --fall-delay: 7.071s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 6.84em;
-  --top-offset: 98.2vh;
-  --fall-duration: 10.65s;
-  --fall-delay: 4.482s;
+  --star-tail-length: 7.39em;
+  --top-offset: 96.91vh;
+  --fall-duration: 6.532s;
+  --fall-delay: 9.35s;
 }
 .star:nth-child(21) {
-  --star-tail-length: 5.03em;
-  --top-offset: 83.12vh;
-  --fall-duration: 7.927s;
-  --fall-delay: 3.793s;
+  --star-tail-length: 6.67em;
+  --top-offset: 98.49vh;
+  --fall-duration: 11.224s;
+  --fall-delay: 1.334s;
 }
 .star:nth-child(22) {
-  --star-tail-length: 5.08em;
-  --top-offset: 95.21vh;
-  --fall-duration: 6.197s;
-  --fall-delay: 7.026s;
+  --star-tail-length: 7.42em;
+  --top-offset: 30.83vh;
+  --fall-duration: 6.257s;
+  --fall-delay: 4.069s;
 }
 .star:nth-child(23) {
-  --star-tail-length: 5.52em;
-  --top-offset: 34.38vh;
-  --fall-duration: 9.065s;
-  --fall-delay: 6.232s;
+  --star-tail-length: 6.1em;
+  --top-offset: 16.17vh;
+  --fall-duration: 10.593s;
+  --fall-delay: 6.344s;
 }
 .star:nth-child(24) {
-  --star-tail-length: 5.21em;
-  --top-offset: 46.41vh;
-  --fall-duration: 7.149s;
-  --fall-delay: 7.806s;
+  --star-tail-length: 5.34em;
+  --top-offset: 11.62vh;
+  --fall-duration: 6.59s;
+  --fall-delay: 6.516s;
 }
 .star:nth-child(25) {
-  --star-tail-length: 5.84em;
-  --top-offset: 60.24vh;
-  --fall-duration: 7.077s;
-  --fall-delay: 6.559s;
+  --star-tail-length: 6.73em;
+  --top-offset: 40.22vh;
+  --fall-duration: 9.827s;
+  --fall-delay: 7.531s;
 }
 .star:nth-child(26) {
-  --star-tail-length: 5.15em;
-  --top-offset: 67.5vh;
-  --fall-duration: 8.859s;
-  --fall-delay: 1.531s;
+  --star-tail-length: 5.19em;
+  --top-offset: 34vh;
+  --fall-duration: 7.963s;
+  --fall-delay: 7.26s;
 }
 .star:nth-child(27) {
-  --star-tail-length: 5.93em;
-  --top-offset: 26.06vh;
-  --fall-duration: 9.272s;
-  --fall-delay: 8.466s;
+  --star-tail-length: 6.08em;
+  --top-offset: 38.1vh;
+  --fall-duration: 10.743s;
+  --fall-delay: 6.563s;
 }
 .star:nth-child(28) {
-  --star-tail-length: 7.11em;
-  --top-offset: 95.7vh;
-  --fall-duration: 8.462s;
-  --fall-delay: 5.388s;
+  --star-tail-length: 6.37em;
+  --top-offset: 77.89vh;
+  --fall-duration: 10.901s;
+  --fall-delay: 7.023s;
 }
 .star:nth-child(29) {
-  --star-tail-length: 7.11em;
-  --top-offset: 19.98vh;
-  --fall-duration: 7.805s;
-  --fall-delay: 9.728s;
+  --star-tail-length: 5.5em;
+  --top-offset: 40.97vh;
+  --fall-duration: 9.729s;
+  --fall-delay: 4.234s;
 }
 .star:nth-child(30) {
-  --star-tail-length: 6.24em;
-  --top-offset: 42.16vh;
-  --fall-duration: 10.996s;
-  --fall-delay: 1.229s;
+  --star-tail-length: 7.33em;
+  --top-offset: 53.74vh;
+  --fall-duration: 6.241s;
+  --fall-delay: 8.37s;
 }
 .star:nth-child(31) {
-  --star-tail-length: 5.67em;
-  --top-offset: 41.5vh;
-  --fall-duration: 7.272s;
-  --fall-delay: 0.507s;
+  --star-tail-length: 5.28em;
+  --top-offset: 84.17vh;
+  --fall-duration: 9.477s;
+  --fall-delay: 8.312s;
 }
 .star:nth-child(32) {
-  --star-tail-length: 6.58em;
-  --top-offset: 14.57vh;
-  --fall-duration: 11.574s;
-  --fall-delay: 2.105s;
+  --star-tail-length: 6.77em;
+  --top-offset: 31.88vh;
+  --fall-duration: 10.025s;
+  --fall-delay: 9.863s;
 }
 .star:nth-child(33) {
-  --star-tail-length: 7.49em;
-  --top-offset: 92.83vh;
-  --fall-duration: 6.235s;
-  --fall-delay: 8.507s;
+  --star-tail-length: 6.81em;
+  --top-offset: 87.31vh;
+  --fall-duration: 10.816s;
+  --fall-delay: 7.868s;
 }
 .star:nth-child(34) {
-  --star-tail-length: 6.38em;
-  --top-offset: 35.68vh;
-  --fall-duration: 11.4s;
-  --fall-delay: 6.554s;
+  --star-tail-length: 5.5em;
+  --top-offset: 4.05vh;
+  --fall-duration: 8.812s;
+  --fall-delay: 5.908s;
 }
 .star:nth-child(35) {
-  --star-tail-length: 7.24em;
-  --top-offset: 8.64vh;
-  --fall-duration: 9.92s;
-  --fall-delay: 2.021s;
+  --star-tail-length: 7.5em;
+  --top-offset: 48.37vh;
+  --fall-duration: 6.854s;
+  --fall-delay: 2.634s;
 }
 .star:nth-child(36) {
-  --star-tail-length: 5.84em;
-  --top-offset: 31.83vh;
-  --fall-duration: 7.374s;
-  --fall-delay: 3.274s;
+  --star-tail-length: 7.15em;
+  --top-offset: 90.5vh;
+  --fall-duration: 9.459s;
+  --fall-delay: 8.872s;
 }
 .star:nth-child(37) {
-  --star-tail-length: 6.65em;
-  --top-offset: 15.45vh;
-  --fall-duration: 10.924s;
-  --fall-delay: 0.573s;
+  --star-tail-length: 5.66em;
+  --top-offset: 90.49vh;
+  --fall-duration: 11.309s;
+  --fall-delay: 6.644s;
 }
 .star:nth-child(38) {
-  --star-tail-length: 5.4em;
-  --top-offset: 38.24vh;
-  --fall-duration: 7.743s;
-  --fall-delay: 7.225s;
+  --star-tail-length: 6.95em;
+  --top-offset: 39.3vh;
+  --fall-duration: 6.408s;
+  --fall-delay: 5.62s;
 }
 .star:nth-child(39) {
-  --star-tail-length: 6.04em;
-  --top-offset: 70.1vh;
-  --fall-duration: 7.641s;
-  --fall-delay: 2.294s;
+  --star-tail-length: 6.6em;
+  --top-offset: 93.12vh;
+  --fall-duration: 9.16s;
+  --fall-delay: 4.607s;
 }
 .star:nth-child(40) {
-  --star-tail-length: 6.34em;
-  --top-offset: 61.34vh;
-  --fall-duration: 11.642s;
-  --fall-delay: 6.041s;
+  --star-tail-length: 7.43em;
+  --top-offset: 72.05vh;
+  --fall-duration: 8.241s;
+  --fall-delay: 8.673s;
 }
 .star:nth-child(41) {
-  --star-tail-length: 6.3em;
-  --top-offset: 90.42vh;
-  --fall-duration: 10.416s;
-  --fall-delay: 5.634s;
+  --star-tail-length: 5.47em;
+  --top-offset: 40.27vh;
+  --fall-duration: 6.241s;
+  --fall-delay: 8.064s;
 }
 .star:nth-child(42) {
-  --star-tail-length: 6.56em;
-  --top-offset: 95.74vh;
-  --fall-duration: 11.537s;
-  --fall-delay: 7.859s;
+  --star-tail-length: 5.82em;
+  --top-offset: 44.11vh;
+  --fall-duration: 11.428s;
+  --fall-delay: 1.412s;
 }
 .star:nth-child(43) {
-  --star-tail-length: 5.1em;
-  --top-offset: 86.15vh;
-  --fall-duration: 11.086s;
-  --fall-delay: 6.09s;
+  --star-tail-length: 5.12em;
+  --top-offset: 7.34vh;
+  --fall-duration: 7.161s;
+  --fall-delay: 4.281s;
 }
 .star:nth-child(44) {
-  --star-tail-length: 6.91em;
-  --top-offset: 15.89vh;
-  --fall-duration: 6.479s;
-  --fall-delay: 7.186s;
+  --star-tail-length: 5.12em;
+  --top-offset: 49.08vh;
+  --fall-duration: 6.665s;
+  --fall-delay: 4.049s;
 }
 .star:nth-child(45) {
-  --star-tail-length: 6.74em;
-  --top-offset: 32.22vh;
-  --fall-duration: 10.45s;
-  --fall-delay: 1.844s;
+  --star-tail-length: 5.34em;
+  --top-offset: 98.26vh;
+  --fall-duration: 7.068s;
+  --fall-delay: 6.557s;
 }
 .star:nth-child(46) {
-  --star-tail-length: 7.09em;
-  --top-offset: 10.49vh;
-  --fall-duration: 9.768s;
-  --fall-delay: 2.338s;
+  --star-tail-length: 7.25em;
+  --top-offset: 53.76vh;
+  --fall-duration: 8.218s;
+  --fall-delay: 4.588s;
 }
 .star:nth-child(47) {
-  --star-tail-length: 5.04em;
-  --top-offset: 16.06vh;
-  --fall-duration: 9.396s;
-  --fall-delay: 1.373s;
+  --star-tail-length: 5.93em;
+  --top-offset: 94.92vh;
+  --fall-duration: 10.205s;
+  --fall-delay: 8.141s;
 }
 .star:nth-child(48) {
-  --star-tail-length: 6.27em;
-  --top-offset: 18.74vh;
-  --fall-duration: 8.816s;
-  --fall-delay: 3.885s;
+  --star-tail-length: 7.25em;
+  --top-offset: 43.44vh;
+  --fall-duration: 9.71s;
+  --fall-delay: 8.274s;
 }
 .star:nth-child(49) {
-  --star-tail-length: 6.46em;
-  --top-offset: 23.38vh;
-  --fall-duration: 10.215s;
-  --fall-delay: 2.157s;
+  --star-tail-length: 5.61em;
+  --top-offset: 23.51vh;
+  --fall-duration: 7.616s;
+  --fall-delay: 2.586s;
 }
 .star:nth-child(50) {
-  --star-tail-length: 7.17em;
-  --top-offset: 62.96vh;
-  --fall-duration: 6.68s;
-  --fall-delay: 8.464s;
+  --star-tail-length: 7.18em;
+  --top-offset: 28.56vh;
+  --fall-duration: 7.381s;
+  --fall-delay: 9.648s;
 }
 .star::before, .star::after {
   position: absolute;
