--- a/css/animações.css
+++ b/css/animações.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /*Galera esse arquivo aqui foi feito pra conter todas as animações que formos usar e criar
 pra manter o sistema organizado*/
 :root {
@@ -19,165 +18,133 @@ pra manter o sistema organizado*/
     color: var(--color-white);
   }
 }
-
 @-webkit-keyframes open_square {
   0% {
     width: 10px;
     height: 0;
   }
-
   50% {
     height: 250px;
     width: 10px;
   }
-
   100% {
     width: 800px;
     height: 250px;
   }
 }
-
 @keyframes open_square {
   0% {
     width: 10px;
     height: 0;
   }
-
   50% {
     height: 250px;
     width: 10px;
   }
-
   100% {
     width: 800px;
     height: 250px;
   }
 }
-
 @-webkit-keyframes open_square_2 {
   0% {
     width: 0px !important;
     height: 0;
   }
-
   100% {
     width: 500px !important;
     height: 450px;
   }
 }
-
 @keyframes open_square_2 {
   0% {
     width: 0px !important;
     height: 0;
   }
-
   100% {
     width: 500px !important;
     height: 450px;
   }
 }
-
 @-webkit-keyframes open_square_3 {
   0% {
     width: 10px;
     height: 0;
   }
-
   50% {
     height: 350px;
     width: 10px;
   }
-
   100% {
     width: 400px;
     height: 350px;
   }
 }
-
 @keyframes open_square_3 {
   0% {
     width: 10px;
     height: 0;
   }
-
   50% {
     height: 350px;
     width: 10px;
   }
-
   100% {
     width: 400px;
     height: 350px;
   }
 }
-
 @-webkit-keyframes type {
   from {
     width: 0;
   }
-
   0% {
     color: var(--color-transp);
   }
-
   20% {
     color: orange;
   }
-
   100% {
     color: orange;
   }
 }
-
 @keyframes type {
   from {
     width: 0;
   }
-
   0% {
     color: var(--color-transp);
   }
-
   20% {
     color: orange;
   }
-
   100% {
     color: orange;
   }
 }
-
 @-webkit-keyframes blink {
   to {
     opacity: 0;
   }
 }
-
 @keyframes blink {
   to {
     opacity: 0;
   }
 }
-
 @-webkit-keyframes aparecer {
   0% {
     opacity: 0%;
   }
-
   100% {
     opacity: 100%;
   }
 }
-
 @keyframes aparecer {
   0% {
     opacity: 0%;
   }
-
   100% {
     opacity: 100%;
   }
-}
-
-/*# sourceMappingURL=animações.css.map */
+}/*# sourceMappingURL=animações.css.map */
