--- a/css/bgindex.scss
+++ b/css/bgindex.scss
@@ -1,4 +1,4 @@
-@import './cores.scss';
+@import './animações.scss';
 
 @mixin sp-layout {
   @media screen and (max-width: 750px) {
@@ -30,7 +30,7 @@ body {
 
 .star {
   $star-count: 50;
-  --star-color: var(--light-color);
+  --star-color: var(--color-light);
   --star-tail-length: 6em;
   --star-tail-height: 2px;
   --star-width: calc(var(--star-tail-length) / 6);
@@ -42,7 +42,7 @@ body {
   left: 0;
   width: var(--star-tail-length);
   height: var(--star-tail-height);
-  color: var(--star-color);
+  color: #f8f9fa;
   background: linear-gradient(45deg, currentColor, transparent);
   border-radius: 50%;
   filter: drop-shadow(0 0 6px currentColor);
