efeito bg, aprimoração

--- a/css/login.scss
+++ b/css/login.scss
@@ -2,7 +2,9 @@
 @import './animações.scss';
 
 body {
-    font: optional;
+    min-height: 100vh;
+    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+    overflow: hidden;
 }
 
 /* Para adcionar uma borda*/
