--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -151,7 +151,9 @@ pra manter o sistema organizado*/
 }
 /*gerais*/
 body {
-  background: darkblue;
+  min-height: 100vh;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  overflow: hidden;
 }
 
 /*main-----------------------------------------------------------------------------------------------------------*/
