--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -1,9 +1,12 @@
 /*importações*/
 @import './animações.scss';
+@import './cores.scss';
 
 /*gerais*/
 body {
-    background: darkblue;
+    min-height: 100vh;
+    background: radial-gradient(ellipse at bottom, $blue 0%, #0c0d13 100%);
+    overflow: hidden;
 }
 
 /*main-----------------------------------------------------------------------------------------------------------*/
