--- a/css/login.css
+++ b/css/login.css
@@ -150,7 +150,9 @@ pra manter o sistema organizado*/
   }
 }
 body {
-  font: optional;
+  min-height: 100vh;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  overflow: hidden;
 }
 
 /* Para adcionar uma borda*/
