--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -1,6 +1,7 @@
 /*importações*/
 @import './animações.scss';
 @import './cores.scss';
+@import 'utilities';
 
 /*gerais*/
 body {
@@ -25,4 +26,29 @@ select {
     opacity: 0%;
     animation: aparecer 2s ease forwards !important;
     animation-delay: 1s !important;
+}
+main  #inputState {
+    transition: none;
+    width: 197px!important;
+}
+.form-selecting { //ajeitando a largura do section
+    --bs-form-select-bg-img: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e);
+    display: block;
+    width: 197px;
+    padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: var(--bs-body-color);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: var(--bs-body-bg);
+    background-image: var(--bs-form-select-bg-img),var(--bs-form-select-bg-icon,none);
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 16px 12px;
+    border: var(--bs-border-width) solid var(--bs-border-color);
+    border-radius: var(--bs-border-radius);
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
