--- a/css/style.css
+++ b/css/style.css
@@ -8,29 +8,9 @@ pra manter o sistema organizado*/
   --color-light: #f8f9fa;
 }
 
-@-webkit-keyframes written_tex {
-  100% {
-    color: var(--color-white);
-  }
-}
-
 @keyframes written_tex {
   100% {
     color: var(--color-white);
-  }
-}
-@-webkit-keyframes open_square {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 250px;
-    width: 10px;
-  }
-  100% {
-    width: 800px;
-    height: 250px;
   }
 }
 @keyframes open_square {
@@ -47,16 +27,6 @@ pra manter o sistema organizado*/
     height: 250px;
   }
 }
-@-webkit-keyframes open_square_2 {
-  0% {
-    width: 0px !important;
-    height: 0;
-  }
-  100% {
-    width: 500px !important;
-    height: 450px;
-  }
-}
 @keyframes open_square_2 {
   0% {
     width: 0px !important;
@@ -65,20 +35,6 @@ pra manter o sistema organizado*/
   100% {
     width: 500px !important;
     height: 450px;
-  }
-}
-@-webkit-keyframes open_square_3 {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 350px;
-    width: 10px;
-  }
-  100% {
-    width: 400px;
-    height: 350px;
   }
 }
 @keyframes open_square_3 {
@@ -95,20 +51,6 @@ pra manter o sistema organizado*/
     height: 350px;
   }
 }
-@-webkit-keyframes type {
-  from {
-    width: 0;
-  }
-  0% {
-    color: var(--color-transp);
-  }
-  20% {
-    color: orange;
-  }
-  100% {
-    color: orange;
-  }
-}
 @keyframes type {
   from {
     width: 0;
@@ -123,22 +65,9 @@ pra manter o sistema organizado*/
     color: orange;
   }
 }
-@-webkit-keyframes blink {
-  to {
-    opacity: 0;
-  }
-}
 @keyframes blink {
   to {
     opacity: 0;
-  }
-}
-@-webkit-keyframes aparecer {
-  0% {
-    opacity: 0%;
-  }
-  100% {
-    opacity: 100%;
   }
 }
 @keyframes aparecer {
@@ -256,318 +185,316 @@ body {
   width: var(--star-tail-length);
   height: var(--star-tail-height);
   color: #f8f9fa;
-  background: linear-gradient(45deg, currentColor);
+  background: linear-gradient(45deg, currentColor, transparent);
   border-radius: 50%;
   filter: drop-shadow(0 0 6px currentColor);
   transform: translate3d(104em, 0, 0);
-  -webkit-animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
-          animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
+  animation: fall var(--fall-duration) var(--fall-delay) linear infinite, tail-fade var(--tail-fade-duration) var(--fall-delay) ease-out infinite;
 }
 @media screen and (max-width: 750px) {
   .star {
-    -webkit-animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
-            animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
+    animation: fall var(--fall-duration) var(--fall-delay) linear infinite;
   }
 }
 .star:nth-child(1) {
-  --star-tail-length: 6.95em;
-  --top-offset: 3.09vh;
-  --fall-duration: 8.899s;
-  --fall-delay: 5.566s;
+  --star-tail-length: 6.99em;
+  --top-offset: 36.17vh;
+  --fall-duration: 6.51s;
+  --fall-delay: 4.127s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 6.36em;
-  --top-offset: 1.21vh;
-  --fall-duration: 10.025s;
-  --fall-delay: 2.352s;
+  --star-tail-length: 6.25em;
+  --top-offset: 56.44vh;
+  --fall-duration: 10.426s;
+  --fall-delay: 9.546s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 6.64em;
-  --top-offset: 30.74vh;
-  --fall-duration: 10.069s;
-  --fall-delay: 7.205s;
+  --star-tail-length: 6.57em;
+  --top-offset: 41.12vh;
+  --fall-duration: 6.625s;
+  --fall-delay: 9.287s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 6.4em;
-  --top-offset: 18.02vh;
-  --fall-duration: 6.498s;
-  --fall-delay: 9.282s;
+  --star-tail-length: 6.48em;
+  --top-offset: 2.26vh;
+  --fall-duration: 9.994s;
+  --fall-delay: 7.902s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 6.15em;
-  --top-offset: 30.73vh;
-  --fall-duration: 9.613s;
-  --fall-delay: 0.203s;
+  --star-tail-length: 7.48em;
+  --top-offset: 7.56vh;
+  --fall-duration: 9.453s;
+  --fall-delay: 9.142s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 6.3em;
-  --top-offset: 79.53vh;
-  --fall-duration: 6.456s;
-  --fall-delay: 5.922s;
+  --star-tail-length: 5.15em;
+  --top-offset: 56.6vh;
+  --fall-duration: 9.925s;
+  --fall-delay: 4.368s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 6.95em;
-  --top-offset: 24.14vh;
-  --fall-duration: 9.483s;
-  --fall-delay: 4.849s;
+  --star-tail-length: 5.88em;
+  --top-offset: 0.08vh;
+  --fall-duration: 10.314s;
+  --fall-delay: 6.536s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 7.49em;
-  --top-offset: 3.5vh;
-  --fall-duration: 8.785s;
-  --fall-delay: 0.475s;
+  --star-tail-length: 5.44em;
+  --top-offset: 13.56vh;
+  --fall-duration: 8.131s;
+  --fall-delay: 8.039s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 5.36em;
-  --top-offset: 29.05vh;
-  --fall-duration: 9.664s;
-  --fall-delay: 8.314s;
+  --star-tail-length: 6.81em;
+  --top-offset: 58.1vh;
+  --fall-duration: 9.917s;
+  --fall-delay: 8.809s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 5.71em;
-  --top-offset: 32.62vh;
-  --fall-duration: 10.448s;
-  --fall-delay: 0.233s;
+  --star-tail-length: 5.96em;
+  --top-offset: 22.77vh;
+  --fall-duration: 9.279s;
+  --fall-delay: 4.236s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 6.06em;
-  --top-offset: 93.18vh;
-  --fall-duration: 6.361s;
-  --fall-delay: 8.895s;
+  --star-tail-length: 7em;
+  --top-offset: 15.18vh;
+  --fall-duration: 11.606s;
+  --fall-delay: 2.265s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 5.88em;
-  --top-offset: 53.34vh;
-  --fall-duration: 8.056s;
-  --fall-delay: 0.134s;
+  --star-tail-length: 6.4em;
+  --top-offset: 94.31vh;
+  --fall-duration: 9.874s;
+  --fall-delay: 3.107s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.75em;
-  --top-offset: 27.53vh;
-  --fall-duration: 11.581s;
-  --fall-delay: 9.418s;
+  --star-tail-length: 5.27em;
+  --top-offset: 95.84vh;
+  --fall-duration: 11.449s;
+  --fall-delay: 6.451s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 6.84em;
-  --top-offset: 26.59vh;
-  --fall-duration: 11.474s;
-  --fall-delay: 5.646s;
+  --star-tail-length: 6.37em;
+  --top-offset: 35.76vh;
+  --fall-duration: 7.797s;
+  --fall-delay: 3.649s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 6.56em;
-  --top-offset: 14.28vh;
-  --fall-duration: 9.693s;
-  --fall-delay: 0.724s;
+  --star-tail-length: 6.27em;
+  --top-offset: 62.95vh;
+  --fall-duration: 10.613s;
+  --fall-delay: 6.727s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 5.9em;
-  --top-offset: 83.69vh;
-  --fall-duration: 7.251s;
-  --fall-delay: 1.278s;
+  --star-tail-length: 7.21em;
+  --top-offset: 49.03vh;
+  --fall-duration: 10.634s;
+  --fall-delay: 9.632s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 6.25em;
-  --top-offset: 7.59vh;
-  --fall-duration: 10.069s;
-  --fall-delay: 3.041s;
+  --star-tail-length: 7.47em;
+  --top-offset: 3.3vh;
+  --fall-duration: 11.429s;
+  --fall-delay: 6.666s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 5.65em;
-  --top-offset: 66.34vh;
-  --fall-duration: 11.987s;
-  --fall-delay: 5.993s;
+  --star-tail-length: 6.39em;
+  --top-offset: 41.36vh;
+  --fall-duration: 8.947s;
+  --fall-delay: 4.461s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 5.52em;
-  --top-offset: 70.27vh;
-  --fall-duration: 8.942s;
-  --fall-delay: 6.211s;
+  --star-tail-length: 6.44em;
+  --top-offset: 20.28vh;
+  --fall-duration: 7.21s;
+  --fall-delay: 3.866s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 5.14em;
-  --top-offset: 40.61vh;
-  --fall-duration: 11.821s;
-  --fall-delay: 2.673s;
+  --star-tail-length: 5.53em;
+  --top-offset: 11.71vh;
+  --fall-duration: 10.714s;
+  --fall-delay: 4.082s;
 }
 .star:nth-child(21) {
-  --star-tail-length: 7.28em;
-  --top-offset: 27.75vh;
-  --fall-duration: 11.366s;
-  --fall-delay: 1.197s;
+  --star-tail-length: 5.43em;
+  --top-offset: 59.77vh;
+  --fall-duration: 7.329s;
+  --fall-delay: 8.633s;
 }
 .star:nth-child(22) {
-  --star-tail-length: 6.44em;
-  --top-offset: 78.19vh;
-  --fall-duration: 7.247s;
-  --fall-delay: 1.825s;
+  --star-tail-length: 6.69em;
+  --top-offset: 32.32vh;
+  --fall-duration: 7.252s;
+  --fall-delay: 1.613s;
 }
 .star:nth-child(23) {
-  --star-tail-length: 5.22em;
-  --top-offset: 69.75vh;
-  --fall-duration: 11.789s;
-  --fall-delay: 2.052s;
+  --star-tail-length: 5.95em;
+  --top-offset: 96.34vh;
+  --fall-duration: 11.845s;
+  --fall-delay: 5.619s;
 }
 .star:nth-child(24) {
-  --star-tail-length: 7.29em;
-  --top-offset: 77.33vh;
-  --fall-duration: 9.661s;
-  --fall-delay: 3.71s;
+  --star-tail-length: 5.54em;
+  --top-offset: 29.92vh;
+  --fall-duration: 6.361s;
+  --fall-delay: 9.531s;
 }
 .star:nth-child(25) {
-  --star-tail-length: 5.15em;
-  --top-offset: 18.48vh;
-  --fall-duration: 11.487s;
-  --fall-delay: 4.67s;
+  --star-tail-length: 6.14em;
+  --top-offset: 46.41vh;
+  --fall-duration: 6.61s;
+  --fall-delay: 4.452s;
 }
 .star:nth-child(26) {
-  --star-tail-length: 7.41em;
-  --top-offset: 15.71vh;
-  --fall-duration: 10.888s;
-  --fall-delay: 1.093s;
+  --star-tail-length: 6.66em;
+  --top-offset: 45.31vh;
+  --fall-duration: 7.121s;
+  --fall-delay: 5.842s;
 }
 .star:nth-child(27) {
-  --star-tail-length: 5.37em;
-  --top-offset: 40.04vh;
-  --fall-duration: 10.799s;
-  --fall-delay: 1.828s;
+  --star-tail-length: 7.29em;
+  --top-offset: 29.32vh;
+  --fall-duration: 6.606s;
+  --fall-delay: 3.942s;
 }
 .star:nth-child(28) {
-  --star-tail-length: 6.15em;
-  --top-offset: 28.07vh;
-  --fall-duration: 7.376s;
-  --fall-delay: 2.145s;
+  --star-tail-length: 7.15em;
+  --top-offset: 48.53vh;
+  --fall-duration: 11.398s;
+  --fall-delay: 5.569s;
 }
 .star:nth-child(29) {
-  --star-tail-length: 6.05em;
-  --top-offset: 75.22vh;
-  --fall-duration: 9.657s;
-  --fall-delay: 1.402s;
+  --star-tail-length: 6.36em;
+  --top-offset: 77.11vh;
+  --fall-duration: 6.89s;
+  --fall-delay: 8.196s;
 }
 .star:nth-child(30) {
-  --star-tail-length: 7.44em;
-  --top-offset: 83.3vh;
-  --fall-duration: 10.235s;
-  --fall-delay: 2.181s;
+  --star-tail-length: 6.69em;
+  --top-offset: 23.43vh;
+  --fall-duration: 6.587s;
+  --fall-delay: 3.122s;
 }
 .star:nth-child(31) {
-  --star-tail-length: 6.21em;
-  --top-offset: 76.03vh;
-  --fall-duration: 8.303s;
-  --fall-delay: 1.236s;
+  --star-tail-length: 5.81em;
+  --top-offset: 41.02vh;
+  --fall-duration: 10.541s;
+  --fall-delay: 4.368s;
 }
 .star:nth-child(32) {
-  --star-tail-length: 6.02em;
-  --top-offset: 60.94vh;
-  --fall-duration: 6.912s;
-  --fall-delay: 7.143s;
+  --star-tail-length: 6.14em;
+  --top-offset: 56.16vh;
+  --fall-duration: 7.197s;
+  --fall-delay: 5.138s;
 }
 .star:nth-child(33) {
-  --star-tail-length: 6.55em;
-  --top-offset: 0.22vh;
-  --fall-duration: 6.988s;
-  --fall-delay: 3.257s;
+  --star-tail-length: 7.41em;
+  --top-offset: 53.86vh;
+  --fall-duration: 7.407s;
+  --fall-delay: 9.044s;
 }
 .star:nth-child(34) {
-  --star-tail-length: 6.61em;
-  --top-offset: 44.72vh;
-  --fall-duration: 7.492s;
-  --fall-delay: 1.885s;
+  --star-tail-length: 6.05em;
+  --top-offset: 12.32vh;
+  --fall-duration: 10.069s;
+  --fall-delay: 4.57s;
 }
 .star:nth-child(35) {
-  --star-tail-length: 5.68em;
-  --top-offset: 26.92vh;
-  --fall-duration: 7.499s;
-  --fall-delay: 9.841s;
+  --star-tail-length: 6.21em;
+  --top-offset: 21.86vh;
+  --fall-duration: 8.711s;
+  --fall-delay: 1.07s;
 }
 .star:nth-child(36) {
-  --star-tail-length: 5.2em;
-  --top-offset: 71.27vh;
-  --fall-duration: 10.74s;
-  --fall-delay: 4.439s;
+  --star-tail-length: 6.06em;
+  --top-offset: 72.4vh;
+  --fall-duration: 8.669s;
+  --fall-delay: 7.428s;
 }
 .star:nth-child(37) {
-  --star-tail-length: 6.05em;
-  --top-offset: 59.88vh;
-  --fall-duration: 9.395s;
-  --fall-delay: 3.815s;
+  --star-tail-length: 5.44em;
+  --top-offset: 61.15vh;
+  --fall-duration: 7.797s;
+  --fall-delay: 7.459s;
 }
 .star:nth-child(38) {
-  --star-tail-length: 7.04em;
-  --top-offset: 85.14vh;
-  --fall-duration: 10.608s;
-  --fall-delay: 4.026s;
+  --star-tail-length: 6.77em;
+  --top-offset: 17.28vh;
+  --fall-duration: 9.927s;
+  --fall-delay: 3.604s;
 }
 .star:nth-child(39) {
-  --star-tail-length: 6.73em;
-  --top-offset: 1.03vh;
-  --fall-duration: 7.587s;
-  --fall-delay: 7.164s;
+  --star-tail-length: 5.88em;
+  --top-offset: 72.96vh;
+  --fall-duration: 7.652s;
+  --fall-delay: 9.478s;
 }
 .star:nth-child(40) {
-  --star-tail-length: 6.29em;
-  --top-offset: 64vh;
-  --fall-duration: 10.35s;
-  --fall-delay: 9.297s;
+  --star-tail-length: 7.37em;
+  --top-offset: 60.19vh;
+  --fall-duration: 8.147s;
+  --fall-delay: 8.119s;
 }
 .star:nth-child(41) {
-  --star-tail-length: 6.5em;
-  --top-offset: 73.8vh;
-  --fall-duration: 9.051s;
-  --fall-delay: 9.927s;
+  --star-tail-length: 7.36em;
+  --top-offset: 54.08vh;
+  --fall-duration: 8.992s;
+  --fall-delay: 8.295s;
 }
 .star:nth-child(42) {
-  --star-tail-length: 5.11em;
-  --top-offset: 92.42vh;
-  --fall-duration: 7.977s;
-  --fall-delay: 4.054s;
+  --star-tail-length: 7.03em;
+  --top-offset: 63.16vh;
+  --fall-duration: 10.185s;
+  --fall-delay: 5.962s;
 }
 .star:nth-child(43) {
-  --star-tail-length: 5.19em;
-  --top-offset: 5.4vh;
-  --fall-duration: 8.348s;
-  --fall-delay: 2.301s;
+  --star-tail-length: 6.21em;
+  --top-offset: 68.04vh;
+  --fall-duration: 11.209s;
+  --fall-delay: 2.87s;
 }
 .star:nth-child(44) {
-  --star-tail-length: 6.86em;
-  --top-offset: 53.93vh;
-  --fall-duration: 11.855s;
-  --fall-delay: 6.66s;
+  --star-tail-length: 5.29em;
+  --top-offset: 15.78vh;
+  --fall-duration: 7.681s;
+  --fall-delay: 3.903s;
 }
 .star:nth-child(45) {
-  --star-tail-length: 6.62em;
-  --top-offset: 86.48vh;
-  --fall-duration: 10.667s;
-  --fall-delay: 2.906s;
+  --star-tail-length: 6.05em;
+  --top-offset: 58.89vh;
+  --fall-duration: 11.907s;
+  --fall-delay: 2.94s;
 }
 .star:nth-child(46) {
-  --star-tail-length: 5.86em;
-  --top-offset: 42.56vh;
-  --fall-duration: 7.446s;
-  --fall-delay: 4.137s;
+  --star-tail-length: 6.15em;
+  --top-offset: 23.2vh;
+  --fall-duration: 9.654s;
+  --fall-delay: 8.183s;
 }
 .star:nth-child(47) {
-  --star-tail-length: 6.93em;
-  --top-offset: 57.64vh;
-  --fall-duration: 10.489s;
-  --fall-delay: 4.338s;
+  --star-tail-length: 5.96em;
+  --top-offset: 69.79vh;
+  --fall-duration: 11.615s;
+  --fall-delay: 3.147s;
 }
 .star:nth-child(48) {
-  --star-tail-length: 5.93em;
-  --top-offset: 37.84vh;
-  --fall-duration: 7.992s;
-  --fall-delay: 1.607s;
+  --star-tail-length: 5em;
+  --top-offset: 14.37vh;
+  --fall-duration: 11.42s;
+  --fall-delay: 9.629s;
 }
 .star:nth-child(49) {
-  --star-tail-length: 5.72em;
-  --top-offset: 26.54vh;
-  --fall-duration: 7.531s;
-  --fall-delay: 8.456s;
+  --star-tail-length: 5.43em;
+  --top-offset: 50.24vh;
+  --fall-duration: 7.134s;
+  --fall-delay: 2.36s;
 }
 .star:nth-child(50) {
-  --star-tail-length: 5.76em;
-  --top-offset: 52.07vh;
-  --fall-duration: 8.217s;
-  --fall-delay: 6.313s;
+  --star-tail-length: 7.07em;
+  --top-offset: 52.46vh;
+  --fall-duration: 6.756s;
+  --fall-delay: 5.695s;
 }
 .star::before, .star::after {
   position: absolute;
@@ -578,8 +505,7 @@ body {
   height: 100%;
   background: linear-gradient(45deg, transparent, currentColor, transparent);
   border-radius: inherit;
-  -webkit-animation: blink 2s linear infinite;
-          animation: blink 2s linear infinite;
+  animation: blink 2s linear infinite;
 }
 .star::before {
   transform: rotate(45deg);
@@ -588,29 +514,9 @@ body {
   transform: rotate(-45deg);
 }
 
-@-webkit-keyframes fall {
-  to {
-    transform: translate3d(-30em, 0, 0);
-  }
-}
-
 @keyframes fall {
   to {
     transform: translate3d(-30em, 0, 0);
-  }
-}
-@-webkit-keyframes tail-fade {
-  0%, 50% {
-    width: var(--star-tail-length);
-    opacity: 1;
-  }
-  70%, 80% {
-    width: 0;
-    opacity: 0.4;
-  }
-  100% {
-    width: 0;
-    opacity: 0;
   }
 }
 @keyframes tail-fade {
@@ -645,23 +551,19 @@ section div h1 {
   font-size: 4.5rem;
   line-height: 6rem;
   color: transparent;
-  -webkit-animation: written_tex 0.5s ease forwards;
-          animation: written_tex 0.5s ease forwards;
+  animation: written_tex 0.5s ease forwards;
 }
 
 section div h1:nth-child(1) {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  animation-delay: 1s;
 }
 
 /*animação do quadro do texto*/
 section .DivText {
   width: 0px;
   height: 0px;
-  -webkit-animation: open_square 0.5s ease forwards;
-          animation: open_square 0.5s ease forwards;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation: open_square 0.5s ease forwards;
+  animation-duration: 1s;
 }
 
 /*animação do texto dp quadro do texto*/
@@ -673,15 +575,12 @@ section .DivText {
   white-space: nowrap;
   overflow: hidden;
   width: 30em;
-  -webkit-animation: type 4s steps(60, end) forwards;
-          animation: type 4s steps(60, end) forwards;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  animation: type 4s steps(60, end) forwards;
+  animation-delay: 2s;
 }
 
 span {
-  -webkit-animation: blink 1s infinite;
-          animation: blink 1s infinite;
+  animation: blink 1s infinite;
 }
 
 /*footer---------------------------------------------------------------------------------------------------------*//*# sourceMappingURL=style.css.map */
