--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -52,3 +52,91 @@ main  #inputState {
     border-radius: var(--bs-border-radius);
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+
+/*--------------------------------loading----------------------------------*/
+
+.boxad{
+    position: absolute;
+    width:100%;height:100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+    }
+    #pen1 {
+        animation: pen1 2s infinite ease;
+      }
+      
+      #pen2 {
+        animation: pen2 2s infinite ease;
+      }
+      
+      #pen3 {
+        animation: pen3 2s infinite ease;
+      }
+      
+      #loader {
+        animation: loaderColor 5s infinite ease;
+      }
+      
+      @keyframes pen1 {
+        0% {
+          transform: translateY(0px);
+        }
+      
+        15% {
+          transform: translateY(-10px);
+        }
+      
+        30% {
+          transform: translateY(0px);
+        }
+      }
+      
+      @keyframes pen2 {
+        30% {
+          transform: translateY(0px);
+        }
+      
+        45% {
+          transform: translateY(-10px);
+        }
+      
+        60% {
+          transform: translateY(0px);
+        }
+      }
+      
+      @keyframes pen3 {
+        60% {
+          transform: translateY(0px);
+        }
+      
+        75% {
+          transform: translateY(-10px);
+        }
+      
+        90% {
+          transform: translateY(0px);
+        }
+      }
+      
+      @keyframes loaderColor {
+        0% {
+          fill: #513B56;
+        }
+      
+        33% {
+          fill: #348AA7;
+        }
+      
+        66% {
+          fill: #5DD39E;
+        }
+      
+        100% {
+          fill: #513B56;
+        }
+      }
