--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -53,14 +53,14 @@ main  form #inputState {
     border-radius: var(--bs-border-radius);
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
-<<<<<<< HEAD
+/*<<<<<<< HEAD*/
 /* Propriedades do iframe */
 iframe {
     width: 800px;
     height: 400px;
     border-radius: 20px;
   }
-=======
+/*=======*/
 
 /*--------------------------------loading----------------------------------*/
 
@@ -149,4 +149,4 @@ iframe {
           fill: #513B56;
         }
       }
->>>>>>> 710249584c7ecc76b196f75caecc310cd8bd6c2b
+/*>>>>>>> 710249584c7ecc76b196f75caecc310cd8bd6c2b*/
