Corrindo um erro no cadastro.php

--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -146,11 +146,11 @@ main  form #inputState {
       }
 /*>>>>>>> 710249584c7ecc76b196f75caecc310cd8bd6c2b*/
 .FromCadastro {
-  display: none;
+  height: 700px;
 }
 .FromCadastro1 {
   width: 450px;
-  
+  display: none;
 }
 svg {
   display: none;
