Mascara para cpf e data

--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -149,8 +149,9 @@ main  form #inputState {
   height: 700px;
 }
 .FromCadastro1 {
-  width: 450px;
+  width: 500px;
   display: none;
+  padding: 15px;
 }
 svg {
   display: none;
