problemas do form1 resolvidos pt.1

--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -145,11 +145,12 @@ main  form #inputState {
         }
       }
 /*>>>>>>> 710249584c7ecc76b196f75caecc310cd8bd6c2b*/
-.FromCadastro {
-  height: 700px;
-}
+
 .FromCadastro1 {
-  width: 500px;
+  width: 450px;
+  height: 50px;
+
+  animation: open_square_2 2s ease forwards;
   display: none;
   padding: 15px;
 }
