--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -148,8 +148,9 @@ main  form #inputState {
 
 .FromCadastro1 {
   width: 450px;
+  height: 450px;
 
-  animation: open_square_2 2s ease forwards;
+  // animation: open_square_2 2s ease forwards;
   display: none;
   padding: 15px;
 }
