--- a/css/animações.css
+++ b/css/animações.css
@@ -26,6 +26,20 @@ pra manter o sistema organizado*/
     height: 250px;
   }
 }
+@keyframes open_square_mobile {
+  0% {
+    width: 10px;
+    height: 0;
+  }
+  50% {
+    height: 250px;
+    width: 10px;
+  }
+  100% {
+    width: 350px;
+    height: auto;
+  }
+}
 @keyframes open_square_2 {
   0% {
     width: 0px !important;
