--- a/css/bgindex.css
+++ b/css/bgindex.css
@@ -26,6 +26,20 @@ pra manter o sistema organizado*/
     height: 250px;
   }
 }
+@keyframes open_square_mobile {
+  0% {
+    width: 10px;
+    height: 0;
+  }
+  50% {
+    height: 250px;
+    width: 10px;
+  }
+  100% {
+    width: 800px;
+    height: 250px;
+  }
+}
 @keyframes open_square_2 {
   0% {
     width: 0px !important;
@@ -118,605 +132,304 @@ body {
   }
 }
 .star:nth-child(1) {
-<<<<<<< HEAD
-  --star-tail-length: 6.34em;
-  --top-offset: 37.6vh;
-  --fall-duration: 6.861s;
-  --fall-delay: 3.699s;
+  --star-tail-length: 5.93em;
+  --top-offset: 40.1vh;
+  --fall-duration: 7.396s;
+  --fall-delay: 2.433s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 6.75em;
-  --top-offset: 79.18vh;
-  --fall-duration: 6.153s;
-  --fall-delay: 6.623s;
+  --star-tail-length: 5.5em;
+  --top-offset: 65.9vh;
+  --fall-duration: 11.645s;
+  --fall-delay: 8.691s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 6.75em;
-  --top-offset: 21.74vh;
-  --fall-duration: 10.476s;
-  --fall-delay: 3.88s;
+  --star-tail-length: 7.32em;
+  --top-offset: 36.1vh;
+  --fall-duration: 10.27s;
+  --fall-delay: 7.546s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 6.85em;
-  --top-offset: 90.03vh;
-  --fall-duration: 10.459s;
-  --fall-delay: 4.861s;
+  --star-tail-length: 7.07em;
+  --top-offset: 43.55vh;
+  --fall-duration: 11.53s;
+  --fall-delay: 6.166s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 5.41em;
-  --top-offset: 59.61vh;
-  --fall-duration: 8.487s;
-  --fall-delay: 1.163s;
-}
-.star:nth-child(6) {
-  --star-tail-length: 5.06em;
-  --top-offset: 54.69vh;
-  --fall-duration: 10.376s;
-  --fall-delay: 1.801s;
-}
-.star:nth-child(7) {
-  --star-tail-length: 5.37em;
-  --top-offset: 60.21vh;
-  --fall-duration: 6.542s;
-  --fall-delay: 1.018s;
-}
-.star:nth-child(8) {
-  --star-tail-length: 6.45em;
-  --top-offset: 38.58vh;
-  --fall-duration: 9.67s;
-  --fall-delay: 6.815s;
-}
-.star:nth-child(9) {
-  --star-tail-length: 5.51em;
-  --top-offset: 36.82vh;
-  --fall-duration: 8.167s;
-  --fall-delay: 9.517s;
-}
-.star:nth-child(10) {
-  --star-tail-length: 5.76em;
-  --top-offset: 26.94vh;
-  --fall-duration: 11.507s;
-  --fall-delay: 9.113s;
-}
-.star:nth-child(11) {
-  --star-tail-length: 6.61em;
-  --top-offset: 5.43vh;
-  --fall-duration: 8.577s;
-  --fall-delay: 1.664s;
-}
-.star:nth-child(12) {
-  --star-tail-length: 5.72em;
-  --top-offset: 25.36vh;
-  --fall-duration: 10.493s;
-  --fall-delay: 3.875s;
-}
-.star:nth-child(13) {
-  --star-tail-length: 5.76em;
-  --top-offset: 23.88vh;
-  --fall-duration: 11.92s;
-  --fall-delay: 0.948s;
-}
-.star:nth-child(14) {
-  --star-tail-length: 5.15em;
-  --top-offset: 88.37vh;
-  --fall-duration: 9.544s;
-  --fall-delay: 1.57s;
-}
-.star:nth-child(15) {
-  --star-tail-length: 5.11em;
-  --top-offset: 10.91vh;
-  --fall-duration: 11.434s;
-  --fall-delay: 7.662s;
-}
-.star:nth-child(16) {
-  --star-tail-length: 6.08em;
-  --top-offset: 81.72vh;
-  --fall-duration: 8.573s;
-  --fall-delay: 7.391s;
-}
-.star:nth-child(17) {
-  --star-tail-length: 5.04em;
-  --top-offset: 31.43vh;
-  --fall-duration: 10.254s;
-  --fall-delay: 0.864s;
-}
-.star:nth-child(18) {
-  --star-tail-length: 6.87em;
-  --top-offset: 45.49vh;
-  --fall-duration: 10.425s;
-  --fall-delay: 8.516s;
-}
-.star:nth-child(19) {
   --star-tail-length: 6.94em;
-  --top-offset: 13.91vh;
-  --fall-duration: 9.448s;
-  --fall-delay: 6.46s;
-}
-.star:nth-child(20) {
-  --star-tail-length: 7.2em;
-  --top-offset: 9.61vh;
-  --fall-duration: 9.316s;
-  --fall-delay: 4.813s;
-}
-.star:nth-child(21) {
-  --star-tail-length: 5.62em;
-  --top-offset: 68.78vh;
-  --fall-duration: 9.348s;
-  --fall-delay: 3.961s;
-}
-.star:nth-child(22) {
-  --star-tail-length: 6.43em;
-  --top-offset: 10.14vh;
-  --fall-duration: 10.295s;
-  --fall-delay: 0.907s;
-}
-.star:nth-child(23) {
-  --star-tail-length: 6.1em;
-  --top-offset: 4.03vh;
-  --fall-duration: 11.348s;
-  --fall-delay: 7.313s;
-}
-.star:nth-child(24) {
-  --star-tail-length: 7.24em;
-  --top-offset: 58.04vh;
-  --fall-duration: 7.932s;
-  --fall-delay: 8.269s;
-}
-.star:nth-child(25) {
-  --star-tail-length: 6.75em;
-  --top-offset: 64.76vh;
-  --fall-duration: 6.619s;
-  --fall-delay: 9.254s;
-}
-.star:nth-child(26) {
-  --star-tail-length: 7.26em;
-  --top-offset: 64.96vh;
-  --fall-duration: 6.72s;
-  --fall-delay: 2.42s;
-}
-.star:nth-child(27) {
-  --star-tail-length: 5.16em;
-  --top-offset: 47.67vh;
-  --fall-duration: 8.825s;
-  --fall-delay: 0.641s;
-}
-.star:nth-child(28) {
-  --star-tail-length: 6.36em;
-  --top-offset: 29.5vh;
-  --fall-duration: 10.602s;
-  --fall-delay: 6.268s;
-}
-.star:nth-child(29) {
-  --star-tail-length: 5.16em;
-  --top-offset: 31.27vh;
-  --fall-duration: 9.264s;
-  --fall-delay: 2.359s;
-}
-.star:nth-child(30) {
-  --star-tail-length: 6.49em;
-  --top-offset: 10vh;
-  --fall-duration: 6.308s;
-  --fall-delay: 9.761s;
-}
-.star:nth-child(31) {
-  --star-tail-length: 5.08em;
-  --top-offset: 50.91vh;
-  --fall-duration: 10.24s;
-  --fall-delay: 6.239s;
-}
-.star:nth-child(32) {
-  --star-tail-length: 5.52em;
-  --top-offset: 82.46vh;
-  --fall-duration: 6.474s;
-  --fall-delay: 2.151s;
-}
-.star:nth-child(33) {
-  --star-tail-length: 6.76em;
-  --top-offset: 45.88vh;
-  --fall-duration: 6.892s;
-  --fall-delay: 9.991s;
-}
-.star:nth-child(34) {
-  --star-tail-length: 5.86em;
-  --top-offset: 52.83vh;
-  --fall-duration: 7.884s;
-  --fall-delay: 5.216s;
-}
-.star:nth-child(35) {
-  --star-tail-length: 7.26em;
-  --top-offset: 86.01vh;
-  --fall-duration: 10.467s;
-  --fall-delay: 2.604s;
-}
-.star:nth-child(36) {
-  --star-tail-length: 6.61em;
-  --top-offset: 54.09vh;
-  --fall-duration: 7.645s;
-  --fall-delay: 5.872s;
-}
-.star:nth-child(37) {
-  --star-tail-length: 5.55em;
-  --top-offset: 93.31vh;
-  --fall-duration: 8.794s;
-  --fall-delay: 1.787s;
-}
-.star:nth-child(38) {
-  --star-tail-length: 6.43em;
-  --top-offset: 23.88vh;
-  --fall-duration: 7.411s;
-  --fall-delay: 1.076s;
-}
-.star:nth-child(39) {
-  --star-tail-length: 6.76em;
-  --top-offset: 13.7vh;
-  --fall-duration: 11.18s;
-  --fall-delay: 4.88s;
-}
-.star:nth-child(40) {
-  --star-tail-length: 6.45em;
-  --top-offset: 54.87vh;
-  --fall-duration: 11.392s;
-  --fall-delay: 6.994s;
-}
-.star:nth-child(41) {
-  --star-tail-length: 5.57em;
-  --top-offset: 19.95vh;
-  --fall-duration: 8.667s;
-  --fall-delay: 4.142s;
-}
-.star:nth-child(42) {
-  --star-tail-length: 7.36em;
-  --top-offset: 13.98vh;
-  --fall-duration: 7.942s;
-  --fall-delay: 7.906s;
-}
-.star:nth-child(43) {
-  --star-tail-length: 5.16em;
-  --top-offset: 26.5vh;
-  --fall-duration: 8.026s;
-  --fall-delay: 7.461s;
-}
-.star:nth-child(44) {
-  --star-tail-length: 5.94em;
-  --top-offset: 73.81vh;
-  --fall-duration: 10.254s;
-  --fall-delay: 0.165s;
-}
-.star:nth-child(45) {
-  --star-tail-length: 5.85em;
-  --top-offset: 63.03vh;
-  --fall-duration: 11.896s;
-  --fall-delay: 7.905s;
-}
-.star:nth-child(46) {
-  --star-tail-length: 7.06em;
-  --top-offset: 39.37vh;
-  --fall-duration: 8.35s;
-  --fall-delay: 3.894s;
-}
-.star:nth-child(47) {
-  --star-tail-length: 5.65em;
-  --top-offset: 0.98vh;
-  --fall-duration: 8.624s;
-  --fall-delay: 4.531s;
-}
-.star:nth-child(48) {
-  --star-tail-length: 5.35em;
-  --top-offset: 31.15vh;
-  --fall-duration: 7.747s;
-  --fall-delay: 8.02s;
-}
-.star:nth-child(49) {
-  --star-tail-length: 5.58em;
-  --top-offset: 43.95vh;
-  --fall-duration: 6.951s;
-  --fall-delay: 3.764s;
-}
-.star:nth-child(50) {
-  --star-tail-length: 7.08em;
-  --top-offset: 72.4vh;
-  --fall-duration: 6s;
-  --fall-delay: 3.907s;
-=======
-  --star-tail-length: 5.05em;
-  --top-offset: 36.18vh;
-  --fall-duration: 8.54s;
-  --fall-delay: 1.56s;
-}
-.star:nth-child(2) {
-  --star-tail-length: 6.73em;
-  --top-offset: 40.68vh;
-  --fall-duration: 6.453s;
-  --fall-delay: 8.456s;
-}
-.star:nth-child(3) {
-  --star-tail-length: 5.57em;
-  --top-offset: 12.5vh;
-  --fall-duration: 6.678s;
-  --fall-delay: 9.116s;
-}
-.star:nth-child(4) {
-  --star-tail-length: 6.72em;
-  --top-offset: 44.71vh;
-  --fall-duration: 6.381s;
-  --fall-delay: 2.887s;
-}
-.star:nth-child(5) {
-  --star-tail-length: 5.72em;
-  --top-offset: 13.53vh;
-  --fall-duration: 9.746s;
-  --fall-delay: 2.044s;
+  --top-offset: 91.11vh;
+  --fall-duration: 10.673s;
+  --fall-delay: 1.301s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 5.91em;
-  --top-offset: 84.79vh;
-  --fall-duration: 10.685s;
-  --fall-delay: 2.575s;
+  --star-tail-length: 7.27em;
+  --top-offset: 70.14vh;
+  --fall-duration: 11.026s;
+  --fall-delay: 1.141s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 5.87em;
-  --top-offset: 36.14vh;
-  --fall-duration: 9.782s;
-  --fall-delay: 1.191s;
+  --star-tail-length: 7.06em;
+  --top-offset: 80.36vh;
+  --fall-duration: 11.158s;
+  --fall-delay: 3.606s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 5.94em;
-  --top-offset: 60.57vh;
-  --fall-duration: 10.647s;
-  --fall-delay: 2.074s;
+  --star-tail-length: 5.28em;
+  --top-offset: 80.7vh;
+  --fall-duration: 8.824s;
+  --fall-delay: 7.049s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 6.57em;
-  --top-offset: 34.48vh;
-  --fall-duration: 6.921s;
-  --fall-delay: 8.381s;
+  --star-tail-length: 5.71em;
+  --top-offset: 74.18vh;
+  --fall-duration: 6.266s;
+  --fall-delay: 5.533s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 5.38em;
-  --top-offset: 65.36vh;
-  --fall-duration: 7.854s;
-  --fall-delay: 4.907s;
+  --star-tail-length: 7.02em;
+  --top-offset: 18.48vh;
+  --fall-duration: 8.315s;
+  --fall-delay: 8.625s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 6.4em;
-  --top-offset: 60.1vh;
-  --fall-duration: 6.205s;
-  --fall-delay: 1.349s;
+  --star-tail-length: 6.28em;
+  --top-offset: 6.8vh;
+  --fall-duration: 10.358s;
+  --fall-delay: 0.857s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 6.61em;
-  --top-offset: 81.38vh;
-  --fall-duration: 9.055s;
-  --fall-delay: 7.671s;
+  --star-tail-length: 5.25em;
+  --top-offset: 56.51vh;
+  --fall-duration: 10.572s;
+  --fall-delay: 3.143s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.73em;
-  --top-offset: 89.57vh;
-  --fall-duration: 11.601s;
-  --fall-delay: 8.27s;
+  --star-tail-length: 5.21em;
+  --top-offset: 74.32vh;
+  --fall-duration: 10.429s;
+  --fall-delay: 0.152s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 6.03em;
-  --top-offset: 48.34vh;
-  --fall-duration: 7.63s;
-  --fall-delay: 7.068s;
+  --star-tail-length: 5.03em;
+  --top-offset: 80.85vh;
+  --fall-duration: 9.491s;
+  --fall-delay: 1.974s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 5.8em;
-  --top-offset: 42.2vh;
-  --fall-duration: 7.294s;
-  --fall-delay: 7.717s;
+  --star-tail-length: 5.63em;
+  --top-offset: 96.18vh;
+  --fall-duration: 10.288s;
+  --fall-delay: 3.578s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 5.42em;
-  --top-offset: 14.53vh;
-  --fall-duration: 11.759s;
-  --fall-delay: 4.684s;
+  --star-tail-length: 6.05em;
+  --top-offset: 28.99vh;
+  --fall-duration: 9.533s;
+  --fall-delay: 8.86s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 6.59em;
-  --top-offset: 79.84vh;
-  --fall-duration: 6.415s;
-  --fall-delay: 9.855s;
+  --star-tail-length: 7.15em;
+  --top-offset: 54.92vh;
+  --fall-duration: 10.321s;
+  --fall-delay: 4.791s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 5.75em;
-  --top-offset: 54.66vh;
-  --fall-duration: 7.781s;
-  --fall-delay: 8.635s;
+  --star-tail-length: 6.51em;
+  --top-offset: 18.76vh;
+  --fall-duration: 8.488s;
+  --fall-delay: 5.051s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 5.35em;
-  --top-offset: 68.81vh;
-  --fall-duration: 7.148s;
-  --fall-delay: 2.04s;
+  --star-tail-length: 6.48em;
+  --top-offset: 81.76vh;
+  --fall-duration: 10.264s;
+  --fall-delay: 7.133s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 7.22em;
-  --top-offset: 28.41vh;
-  --fall-duration: 8.713s;
-  --fall-delay: 4.301s;
+  --star-tail-length: 6.44em;
+  --top-offset: 22.46vh;
+  --fall-duration: 10.102s;
+  --fall-delay: 4.836s;
 }
 .star:nth-child(21) {
-  --star-tail-length: 6.96em;
-  --top-offset: 14.49vh;
-  --fall-duration: 8.917s;
-  --fall-delay: 8.708s;
+  --star-tail-length: 5.06em;
+  --top-offset: 73.43vh;
+  --fall-duration: 7.186s;
+  --fall-delay: 7.513s;
 }
 .star:nth-child(22) {
-  --star-tail-length: 6.08em;
-  --top-offset: 22.52vh;
-  --fall-duration: 11.232s;
-  --fall-delay: 0.798s;
+  --star-tail-length: 7.19em;
+  --top-offset: 98.65vh;
+  --fall-duration: 10.221s;
+  --fall-delay: 0.13s;
 }
 .star:nth-child(23) {
-  --star-tail-length: 5.17em;
-  --top-offset: 11.3vh;
-  --fall-duration: 9.485s;
-  --fall-delay: 1.535s;
+  --star-tail-length: 7.32em;
+  --top-offset: 36.33vh;
+  --fall-duration: 6.451s;
+  --fall-delay: 1.734s;
 }
 .star:nth-child(24) {
-  --star-tail-length: 7.22em;
-  --top-offset: 0.31vh;
-  --fall-duration: 6.688s;
-  --fall-delay: 5.566s;
+  --star-tail-length: 6.58em;
+  --top-offset: 10.82vh;
+  --fall-duration: 6.37s;
+  --fall-delay: 1.364s;
 }
 .star:nth-child(25) {
-  --star-tail-length: 7.31em;
-  --top-offset: 89.18vh;
-  --fall-duration: 9.995s;
-  --fall-delay: 8.728s;
+  --star-tail-length: 5.85em;
+  --top-offset: 79.54vh;
+  --fall-duration: 10.997s;
+  --fall-delay: 7.758s;
 }
 .star:nth-child(26) {
-  --star-tail-length: 6.92em;
-  --top-offset: 0.78vh;
-  --fall-duration: 11.813s;
-  --fall-delay: 8.777s;
+  --star-tail-length: 5.58em;
+  --top-offset: 73.72vh;
+  --fall-duration: 11.093s;
+  --fall-delay: 7.457s;
 }
 .star:nth-child(27) {
-  --star-tail-length: 6.35em;
-  --top-offset: 20.85vh;
-  --fall-duration: 11.727s;
-  --fall-delay: 8.15s;
+  --star-tail-length: 6.79em;
+  --top-offset: 83.12vh;
+  --fall-duration: 11.053s;
+  --fall-delay: 9.461s;
 }
 .star:nth-child(28) {
-  --star-tail-length: 5.41em;
-  --top-offset: 79.7vh;
-  --fall-duration: 10.71s;
-  --fall-delay: 6.926s;
+  --star-tail-length: 5.37em;
+  --top-offset: 83.68vh;
+  --fall-duration: 10.238s;
+  --fall-delay: 9.279s;
 }
 .star:nth-child(29) {
-  --star-tail-length: 7.13em;
-  --top-offset: 91.83vh;
-  --fall-duration: 10.913s;
-  --fall-delay: 9.726s;
+  --star-tail-length: 7.29em;
+  --top-offset: 32.55vh;
+  --fall-duration: 7.603s;
+  --fall-delay: 0.289s;
 }
 .star:nth-child(30) {
-  --star-tail-length: 5.57em;
-  --top-offset: 39.14vh;
-  --fall-duration: 7.05s;
-  --fall-delay: 5.938s;
+  --star-tail-length: 6.62em;
+  --top-offset: 12.06vh;
+  --fall-duration: 8.293s;
+  --fall-delay: 4.018s;
 }
 .star:nth-child(31) {
-  --star-tail-length: 7.49em;
-  --top-offset: 72.43vh;
-  --fall-duration: 9.444s;
-  --fall-delay: 5.483s;
+  --star-tail-length: 5.8em;
+  --top-offset: 6.37vh;
+  --fall-duration: 7.181s;
+  --fall-delay: 9.423s;
 }
 .star:nth-child(32) {
-  --star-tail-length: 5.4em;
-  --top-offset: 26.53vh;
-  --fall-duration: 8.979s;
-  --fall-delay: 3.099s;
+  --star-tail-length: 6.56em;
+  --top-offset: 43.12vh;
+  --fall-duration: 6.444s;
+  --fall-delay: 6.002s;
 }
 .star:nth-child(33) {
-  --star-tail-length: 5.2em;
-  --top-offset: 79.86vh;
-  --fall-duration: 11.252s;
-  --fall-delay: 2.592s;
+  --star-tail-length: 6.54em;
+  --top-offset: 90.15vh;
+  --fall-duration: 9.42s;
+  --fall-delay: 8.803s;
 }
 .star:nth-child(34) {
-  --star-tail-length: 5.25em;
-  --top-offset: 49.91vh;
-  --fall-duration: 6.743s;
-  --fall-delay: 4.251s;
+  --star-tail-length: 5.72em;
+  --top-offset: 62.59vh;
+  --fall-duration: 7.941s;
+  --fall-delay: 9.158s;
 }
 .star:nth-child(35) {
-  --star-tail-length: 7.42em;
-  --top-offset: 97.86vh;
-  --fall-duration: 10.582s;
-  --fall-delay: 1.448s;
+  --star-tail-length: 5.4em;
+  --top-offset: 28.57vh;
+  --fall-duration: 10.893s;
+  --fall-delay: 1.808s;
 }
 .star:nth-child(36) {
-  --star-tail-length: 6.84em;
-  --top-offset: 17.57vh;
-  --fall-duration: 9.99s;
-  --fall-delay: 2.089s;
+  --star-tail-length: 6.24em;
+  --top-offset: 66.18vh;
+  --fall-duration: 9.433s;
+  --fall-delay: 2.766s;
 }
 .star:nth-child(37) {
-  --star-tail-length: 5.13em;
-  --top-offset: 7.4vh;
-  --fall-duration: 11.14s;
-  --fall-delay: 8.183s;
+  --star-tail-length: 7.18em;
+  --top-offset: 20.72vh;
+  --fall-duration: 10.356s;
+  --fall-delay: 8.102s;
 }
 .star:nth-child(38) {
-  --star-tail-length: 5.54em;
-  --top-offset: 55.85vh;
-  --fall-duration: 8.824s;
-  --fall-delay: 9.377s;
+  --star-tail-length: 6.17em;
+  --top-offset: 85.93vh;
+  --fall-duration: 11.928s;
+  --fall-delay: 1.511s;
 }
 .star:nth-child(39) {
-  --star-tail-length: 5.52em;
-  --top-offset: 43.74vh;
-  --fall-duration: 10.524s;
-  --fall-delay: 5.935s;
+  --star-tail-length: 5.67em;
+  --top-offset: 38.13vh;
+  --fall-duration: 10.932s;
+  --fall-delay: 4.007s;
 }
 .star:nth-child(40) {
-  --star-tail-length: 5.92em;
-  --top-offset: 2.21vh;
-  --fall-duration: 6.9s;
-  --fall-delay: 2.493s;
+  --star-tail-length: 6.49em;
+  --top-offset: 46.83vh;
+  --fall-duration: 6.113s;
+  --fall-delay: 3.911s;
 }
 .star:nth-child(41) {
-  --star-tail-length: 6.17em;
-  --top-offset: 37.25vh;
-  --fall-duration: 6.117s;
-  --fall-delay: 7.189s;
+  --star-tail-length: 6.66em;
+  --top-offset: 58.07vh;
+  --fall-duration: 7.094s;
+  --fall-delay: 1.362s;
 }
 .star:nth-child(42) {
-  --star-tail-length: 6.62em;
-  --top-offset: 59.63vh;
-  --fall-duration: 8.721s;
-  --fall-delay: 3.944s;
+  --star-tail-length: 5.67em;
+  --top-offset: 15.23vh;
+  --fall-duration: 8.561s;
+  --fall-delay: 5.037s;
 }
 .star:nth-child(43) {
-  --star-tail-length: 5.08em;
-  --top-offset: 95.17vh;
-  --fall-duration: 9.949s;
-  --fall-delay: 0.435s;
+  --star-tail-length: 6.23em;
+  --top-offset: 75.17vh;
+  --fall-duration: 9.051s;
+  --fall-delay: 1.72s;
 }
 .star:nth-child(44) {
-  --star-tail-length: 6.79em;
-  --top-offset: 43.19vh;
-  --fall-duration: 11.568s;
-  --fall-delay: 6.288s;
+  --star-tail-length: 6.31em;
+  --top-offset: 5.45vh;
+  --fall-duration: 10.321s;
+  --fall-delay: 0.706s;
 }
 .star:nth-child(45) {
-  --star-tail-length: 6.35em;
-  --top-offset: 81.51vh;
-  --fall-duration: 10.075s;
-  --fall-delay: 3.098s;
+  --star-tail-length: 5.23em;
+  --top-offset: 81.27vh;
+  --fall-duration: 11.488s;
+  --fall-delay: 2.377s;
 }
 .star:nth-child(46) {
-  --star-tail-length: 6.48em;
-  --top-offset: 80.57vh;
-  --fall-duration: 8.17s;
-  --fall-delay: 5.204s;
+  --star-tail-length: 5.85em;
+  --top-offset: 11.59vh;
+  --fall-duration: 10.492s;
+  --fall-delay: 6.432s;
 }
 .star:nth-child(47) {
-  --star-tail-length: 7.06em;
-  --top-offset: 90.75vh;
-  --fall-duration: 7.986s;
-  --fall-delay: 3.927s;
+  --star-tail-length: 6.13em;
+  --top-offset: 84.41vh;
+  --fall-duration: 6.193s;
+  --fall-delay: 8.736s;
 }
 .star:nth-child(48) {
-  --star-tail-length: 6.07em;
-  --top-offset: 46.09vh;
-  --fall-duration: 9.869s;
-  --fall-delay: 0.463s;
+  --star-tail-length: 6.16em;
+  --top-offset: 73.93vh;
+  --fall-duration: 7.159s;
+  --fall-delay: 5.155s;
 }
 .star:nth-child(49) {
-  --star-tail-length: 6.11em;
-  --top-offset: 98.04vh;
-  --fall-duration: 10.171s;
-  --fall-delay: 9.757s;
+  --star-tail-length: 7.06em;
+  --top-offset: 66.43vh;
+  --fall-duration: 9.142s;
+  --fall-delay: 7.505s;
 }
 .star:nth-child(50) {
-  --star-tail-length: 5.57em;
-  --top-offset: 20.27vh;
-  --fall-duration: 11.162s;
-  --fall-delay: 6.598s;
->>>>>>> 710249584c7ecc76b196f75caecc310cd8bd6c2b
+  --star-tail-length: 5.68em;
+  --top-offset: 62.59vh;
+  --fall-duration: 7.309s;
+  --fall-delay: 0.781s;
 }
 .star::before, .star::after {
   position: absolute;
