--- a/css/login.css
+++ b/css/login.css
@@ -27,6 +27,20 @@ pra manter o sistema organizado*/
     height: 250px;
   }
 }
+@keyframes open_square_mobile {
+  0% {
+    width: 10px;
+    height: 0;
+  }
+  50% {
+    height: 250px;
+    width: 10px;
+  }
+  100% {
+    width: 800px;
+    height: 250px;
+  }
+}
 @keyframes open_square_2 {
   0% {
     width: 0px !important;
@@ -97,4 +111,78 @@ body {
   opacity: 0;
   animation: aparecer 3s ease forwards;
   animation-delay: 2s;
+}
+
+/*---------------------------------loading-------------------------------------*/
+.boxad {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#pen1 {
+  animation: pen1 2s infinite ease;
+}
+
+#pen2 {
+  animation: pen2 2s infinite ease;
+}
+
+#pen3 {
+  animation: pen3 2s infinite ease;
+}
+
+#loader {
+  animation: loaderColor 5s infinite ease;
+}
+
+@keyframes pen1 {
+  0% {
+    transform: translateY(0px);
+  }
+  15% {
+    transform: translateY(-10px);
+  }
+  30% {
+    transform: translateY(0px);
+  }
+}
+@keyframes pen2 {
+  30% {
+    transform: translateY(0px);
+  }
+  45% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(0px);
+  }
+}
+@keyframes pen3 {
+  60% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(-10px);
+  }
+  90% {
+    transform: translateY(0px);
+  }
+}
+@keyframes loaderColor {
+  0% {
+    fill: #513B56;
+  }
+  33% {
+    fill: #348AA7;
+  }
+  66% {
+    fill: #5DD39E;
+  }
+  100% {
+    fill: #513B56;
+  }
 }/*# sourceMappingURL=login.css.map */
