--- a/css/login.css
+++ b/css/login.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
+
 /*importações*/
 /*Galera esse arquivo aqui foi feito pra conter todas as animações que formos usar e criar
 pra manter o sistema organizado*/
-:root {
+/* :root {
   --color-white: #fff;
   --color-transp: #ffffff00;
   --color-light: #f8f9fa;
@@ -91,15 +92,15 @@ pra manter o sistema organizado*/
   100% {
     opacity: 100%;
   }
-}
+}*/
 body {
   min-height: 100vh;
   background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* Para adcionar uma borda*/
-#caixa {
+  /* #caixa {
   border: solid 1px black;
   border-radius: 20px;
   padding: 10px;
@@ -111,10 +112,10 @@ body {
   opacity: 0;
   animation: aparecer 3s ease forwards;
   animation-delay: 2s;
-}
+}  */
 
 /*---------------------------------loading-------------------------------------*/
-.boxad {
+/* .boxad {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -143,46 +144,61 @@ body {
   0% {
     transform: translateY(0px);
   }
+
   15% {
     transform: translateY(-10px);
   }
+
   30% {
     transform: translateY(0px);
   }
 }
+
 @keyframes pen2 {
   30% {
     transform: translateY(0px);
   }
+
   45% {
     transform: translateY(-10px);
   }
+
   60% {
     transform: translateY(0px);
   }
 }
+
 @keyframes pen3 {
   60% {
     transform: translateY(0px);
   }
+
   75% {
     transform: translateY(-10px);
   }
+
   90% {
     transform: translateY(0px);
   }
 }
+
 @keyframes loaderColor {
   0% {
     fill: #513B56;
   }
+
   33% {
     fill: #348AA7;
   }
+
   66% {
     fill: #5DD39E;
   }
+
   100% {
     fill: #513B56;
   }
-}/*# sourceMappingURL=login.css.map */
+
+} */
+
+/*# sourceMappingURL=login.css.map */
