--- a/css/login.scss
+++ b/css/login.scss
@@ -1,112 +1,169 @@
-/*importações*/
-@import './animações.scss';
+// /*importações*/
+// @import './animações.scss';
 
 body {
-    min-height: 100vh;
-    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-    overflow: hidden;
+  min-height: 100vh;
+  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
+  /* overflow: hidden; */
 }
 
-/* Para adcionar uma borda*/
-#caixa {
-    border: solid 1px black;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 20px;
-    animation: open_square_3 2s ease forwards;
+// /* Para adcionar uma borda*/
+// #caixa {
+//     border: solid 1px black;
+//     border-radius: 20px;
+//     padding: 10px;
+//     margin: 20px;
+//     animation: open_square_3 2s ease forwards;
+// }
+
+// #caixa form {
+//     opacity: 0;
+//     animation: aparecer 3s ease forwards;
+//     animation-delay: 2s;
+// }
+
+// /*---------------------------------loading-------------------------------------*/
+
+// .boxad{
+//     position: absolute;
+//     width:100%;height:100%;
+
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+
+//     }
+//     #pen1 {
+//         animation: pen1 2s infinite ease;
+//       }
+
+//       #pen2 {
+//         animation: pen2 2s infinite ease;
+//       }
+
+//       #pen3 {
+//         animation: pen3 2s infinite ease;
+//       }
+
+//       #loader {
+//         animation: loaderColor 5s infinite ease;
+//       }
+
+//       @keyframes pen1 {
+//         0% {
+//           transform: translateY(0px);
+//         }
+
+//         15% {
+//           transform: translateY(-10px);
+//         }
+
+//         30% {
+//           transform: translateY(0px);
+//         }
+//       }
+
+//       @keyframes pen2 {
+//         30% {
+//           transform: translateY(0px);
+//         }
+
+//         45% {
+//           transform: translateY(-10px);
+//         }
+
+//         60% {
+//           transform: translateY(0px);
+//         }
+//       }
+
+//       @keyframes pen3 {
+//         60% {
+//           transform: translateY(0px);
+//         }
+
+//         75% {
+//           transform: translateY(-10px);
+//         }
+
+//         90% {
+//           transform: translateY(0px);
+//         }
+//       }
+
+//       @keyframes loaderColor {
+//         0% {
+//           fill: #513B56;
+//         }
+
+//         33% {
+//           fill: #348AA7;
+//         }
+
+//         66% {
+//           fill: #5DD39E;
+//         }
+
+//         100% {
+//           fill: #513B56;
+//         }
+//       }
+
+.login-card {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #e8e8e8;
+  box-shadow: 2px 2px 10px #ccc;
+  max-width: 100%;
 }
 
-#caixa form {
-    opacity: 0;
-    animation: aparecer 3s ease forwards;
-    animation-delay: 2s;
+.card-header {
+  text-align: center;
+  margin-bottom: 20px
 }
 
-/*---------------------------------loading-------------------------------------*/
+.card-header .log {
+  margin: 0;
+  font-size: 24px;
+  color: black;
+}
 
-.boxad{
-    position: absolute;
-    width:100%;height:100%;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    
-    }
-    #pen1 {
-        animation: pen1 2s infinite ease;
-      }
-      
-      #pen2 {
-        animation: pen2 2s infinite ease;
-      }
-      
-      #pen3 {
-        animation: pen3 2s infinite ease;
-      }
-      
-      #loader {
-        animation: loaderColor 5s infinite ease;
-      }
-      
-      @keyframes pen1 {
-        0% {
-          transform: translateY(0px);
-        }
-      
-        15% {
-          transform: translateY(-10px);
-        }
-      
-        30% {
-          transform: translateY(0px);
-        }
-      }
-      
-      @keyframes pen2 {
-        30% {
-          transform: translateY(0px);
-        }
-      
-        45% {
-          transform: translateY(-10px);
-        }
-      
-        60% {
-          transform: translateY(0px);
-        }
-      }
-      
-      @keyframes pen3 {
-        60% {
-          transform: translateY(0px);
-        }
-      
-        75% {
-          transform: translateY(-10px);
-        }
-      
-        90% {
-          transform: translateY(0px);
-        }
-      }
-      
-      @keyframes loaderColor {
-        0% {
-          fill: #513B56;
-        }
-      
-        33% {
-          fill: #348AA7;
-        }
-      
-        66% {
-          fill: #5DD39E;
-        }
-      
-        100% {
-          fill: #513B56;
-        }
-      }
-    
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 12px 20px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+input[type="submit"] {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #ccc;
+  color: black;
+}
