--- a/css/bgindex.css
+++ b/css/bgindex.css
@@ -23,7 +23,7 @@ pra manter o sistema organizado*/
   }
   100% {
     width: 800px;
-    height: 250px;
+    height: auto;
   }
 }
 @keyframes open_square_mobile {
@@ -36,8 +36,8 @@ pra manter o sistema organizado*/
     width: 10px;
   }
   100% {
-    width: 800px;
-    height: 250px;
+    width: 350px;
+    height: auto;
   }
 }
 @keyframes open_square_2 {
@@ -132,304 +132,304 @@ body {
   }
 }
 .star:nth-child(1) {
-  --star-tail-length: 5.93em;
-  --top-offset: 40.1vh;
-  --fall-duration: 7.396s;
-  --fall-delay: 2.433s;
+  --star-tail-length: 7.49em;
+  --top-offset: 30.29vh;
+  --fall-duration: 11.921s;
+  --fall-delay: 6.521s;
 }
 .star:nth-child(2) {
-  --star-tail-length: 5.5em;
-  --top-offset: 65.9vh;
-  --fall-duration: 11.645s;
-  --fall-delay: 8.691s;
+  --star-tail-length: 7.38em;
+  --top-offset: 5.2vh;
+  --fall-duration: 6.881s;
+  --fall-delay: 1.942s;
 }
 .star:nth-child(3) {
-  --star-tail-length: 7.32em;
-  --top-offset: 36.1vh;
-  --fall-duration: 10.27s;
-  --fall-delay: 7.546s;
+  --star-tail-length: 7.02em;
+  --top-offset: 91.74vh;
+  --fall-duration: 10.329s;
+  --fall-delay: 7.196s;
 }
 .star:nth-child(4) {
-  --star-tail-length: 7.07em;
-  --top-offset: 43.55vh;
-  --fall-duration: 11.53s;
-  --fall-delay: 6.166s;
+  --star-tail-length: 5.5em;
+  --top-offset: 53.94vh;
+  --fall-duration: 10.642s;
+  --fall-delay: 1.324s;
 }
 .star:nth-child(5) {
-  --star-tail-length: 6.94em;
-  --top-offset: 91.11vh;
-  --fall-duration: 10.673s;
-  --fall-delay: 1.301s;
+  --star-tail-length: 5.06em;
+  --top-offset: 75.93vh;
+  --fall-duration: 11.364s;
+  --fall-delay: 5.354s;
 }
 .star:nth-child(6) {
-  --star-tail-length: 7.27em;
-  --top-offset: 70.14vh;
-  --fall-duration: 11.026s;
-  --fall-delay: 1.141s;
+  --star-tail-length: 6.64em;
+  --top-offset: 88.33vh;
+  --fall-duration: 10.988s;
+  --fall-delay: 8.273s;
 }
 .star:nth-child(7) {
-  --star-tail-length: 7.06em;
-  --top-offset: 80.36vh;
-  --fall-duration: 11.158s;
-  --fall-delay: 3.606s;
+  --star-tail-length: 5.32em;
+  --top-offset: 74.5vh;
+  --fall-duration: 7.929s;
+  --fall-delay: 1.017s;
 }
 .star:nth-child(8) {
-  --star-tail-length: 5.28em;
-  --top-offset: 80.7vh;
-  --fall-duration: 8.824s;
-  --fall-delay: 7.049s;
+  --star-tail-length: 5.51em;
+  --top-offset: 97.55vh;
+  --fall-duration: 6.346s;
+  --fall-delay: 6.712s;
 }
 .star:nth-child(9) {
-  --star-tail-length: 5.71em;
-  --top-offset: 74.18vh;
-  --fall-duration: 6.266s;
-  --fall-delay: 5.533s;
+  --star-tail-length: 6.35em;
+  --top-offset: 43.3vh;
+  --fall-duration: 10.968s;
+  --fall-delay: 7.382s;
 }
 .star:nth-child(10) {
-  --star-tail-length: 7.02em;
-  --top-offset: 18.48vh;
-  --fall-duration: 8.315s;
-  --fall-delay: 8.625s;
+  --star-tail-length: 6.88em;
+  --top-offset: 17.05vh;
+  --fall-duration: 9.77s;
+  --fall-delay: 7.607s;
 }
 .star:nth-child(11) {
-  --star-tail-length: 6.28em;
-  --top-offset: 6.8vh;
-  --fall-duration: 10.358s;
-  --fall-delay: 0.857s;
+  --star-tail-length: 5.27em;
+  --top-offset: 57.04vh;
+  --fall-duration: 10.93s;
+  --fall-delay: 5.058s;
 }
 .star:nth-child(12) {
-  --star-tail-length: 5.25em;
-  --top-offset: 56.51vh;
-  --fall-duration: 10.572s;
-  --fall-delay: 3.143s;
+  --star-tail-length: 5.51em;
+  --top-offset: 91.77vh;
+  --fall-duration: 9.393s;
+  --fall-delay: 0.992s;
 }
 .star:nth-child(13) {
-  --star-tail-length: 5.21em;
-  --top-offset: 74.32vh;
-  --fall-duration: 10.429s;
-  --fall-delay: 0.152s;
+  --star-tail-length: 6.44em;
+  --top-offset: 85.13vh;
+  --fall-duration: 11.866s;
+  --fall-delay: 4.441s;
 }
 .star:nth-child(14) {
-  --star-tail-length: 5.03em;
-  --top-offset: 80.85vh;
-  --fall-duration: 9.491s;
-  --fall-delay: 1.974s;
+  --star-tail-length: 6.91em;
+  --top-offset: 89.12vh;
+  --fall-duration: 11.41s;
+  --fall-delay: 5.045s;
 }
 .star:nth-child(15) {
-  --star-tail-length: 5.63em;
-  --top-offset: 96.18vh;
-  --fall-duration: 10.288s;
-  --fall-delay: 3.578s;
+  --star-tail-length: 6.03em;
+  --top-offset: 65.29vh;
+  --fall-duration: 11.2s;
+  --fall-delay: 6.771s;
 }
 .star:nth-child(16) {
-  --star-tail-length: 6.05em;
-  --top-offset: 28.99vh;
-  --fall-duration: 9.533s;
-  --fall-delay: 8.86s;
+  --star-tail-length: 7.17em;
+  --top-offset: 5.37vh;
+  --fall-duration: 8.09s;
+  --fall-delay: 2.398s;
 }
 .star:nth-child(17) {
-  --star-tail-length: 7.15em;
-  --top-offset: 54.92vh;
-  --fall-duration: 10.321s;
-  --fall-delay: 4.791s;
+  --star-tail-length: 6.7em;
+  --top-offset: 35.15vh;
+  --fall-duration: 11.057s;
+  --fall-delay: 4.3s;
 }
 .star:nth-child(18) {
-  --star-tail-length: 6.51em;
-  --top-offset: 18.76vh;
-  --fall-duration: 8.488s;
-  --fall-delay: 5.051s;
+  --star-tail-length: 6.7em;
+  --top-offset: 52.71vh;
+  --fall-duration: 10.132s;
+  --fall-delay: 3.037s;
 }
 .star:nth-child(19) {
-  --star-tail-length: 6.48em;
-  --top-offset: 81.76vh;
-  --fall-duration: 10.264s;
-  --fall-delay: 7.133s;
+  --star-tail-length: 6.67em;
+  --top-offset: 72.3vh;
+  --fall-duration: 11.592s;
+  --fall-delay: 5.301s;
 }
 .star:nth-child(20) {
-  --star-tail-length: 6.44em;
-  --top-offset: 22.46vh;
-  --fall-duration: 10.102s;
-  --fall-delay: 4.836s;
+  --star-tail-length: 5.29em;
+  --top-offset: 54.36vh;
+  --fall-duration: 11.67s;
+  --fall-delay: 5.53s;
 }
 .star:nth-child(21) {
-  --star-tail-length: 5.06em;
-  --top-offset: 73.43vh;
-  --fall-duration: 7.186s;
-  --fall-delay: 7.513s;
+  --star-tail-length: 6.12em;
+  --top-offset: 74.08vh;
+  --fall-duration: 7.054s;
+  --fall-delay: 8.9s;
 }
 .star:nth-child(22) {
-  --star-tail-length: 7.19em;
-  --top-offset: 98.65vh;
-  --fall-duration: 10.221s;
-  --fall-delay: 0.13s;
+  --star-tail-length: 7.03em;
+  --top-offset: 39.18vh;
+  --fall-duration: 9.005s;
+  --fall-delay: 5.469s;
 }
 .star:nth-child(23) {
-  --star-tail-length: 7.32em;
-  --top-offset: 36.33vh;
-  --fall-duration: 6.451s;
-  --fall-delay: 1.734s;
+  --star-tail-length: 6.7em;
+  --top-offset: 86.55vh;
+  --fall-duration: 10.215s;
+  --fall-delay: 6.558s;
 }
 .star:nth-child(24) {
-  --star-tail-length: 6.58em;
-  --top-offset: 10.82vh;
-  --fall-duration: 6.37s;
-  --fall-delay: 1.364s;
+  --star-tail-length: 5.09em;
+  --top-offset: 7.39vh;
+  --fall-duration: 8.111s;
+  --fall-delay: 8.56s;
 }
 .star:nth-child(25) {
-  --star-tail-length: 5.85em;
-  --top-offset: 79.54vh;
-  --fall-duration: 10.997s;
-  --fall-delay: 7.758s;
+  --star-tail-length: 5.01em;
+  --top-offset: 59.99vh;
+  --fall-duration: 11.374s;
+  --fall-delay: 9.147s;
 }
 .star:nth-child(26) {
-  --star-tail-length: 5.58em;
-  --top-offset: 73.72vh;
-  --fall-duration: 11.093s;
-  --fall-delay: 7.457s;
+  --star-tail-length: 5.13em;
+  --top-offset: 47.97vh;
+  --fall-duration: 8.274s;
+  --fall-delay: 4.027s;
 }
 .star:nth-child(27) {
-  --star-tail-length: 6.79em;
-  --top-offset: 83.12vh;
-  --fall-duration: 11.053s;
-  --fall-delay: 9.461s;
+  --star-tail-length: 6.3em;
+  --top-offset: 37.63vh;
+  --fall-duration: 10.244s;
+  --fall-delay: 5.332s;
 }
 .star:nth-child(28) {
-  --star-tail-length: 5.37em;
-  --top-offset: 83.68vh;
-  --fall-duration: 10.238s;
-  --fall-delay: 9.279s;
+  --star-tail-length: 5.94em;
+  --top-offset: 94.12vh;
+  --fall-duration: 9.468s;
+  --fall-delay: 6.37s;
 }
 .star:nth-child(29) {
-  --star-tail-length: 7.29em;
-  --top-offset: 32.55vh;
-  --fall-duration: 7.603s;
-  --fall-delay: 0.289s;
+  --star-tail-length: 5.52em;
+  --top-offset: 65.42vh;
+  --fall-duration: 8.927s;
+  --fall-delay: 5.383s;
 }
 .star:nth-child(30) {
-  --star-tail-length: 6.62em;
-  --top-offset: 12.06vh;
-  --fall-duration: 8.293s;
-  --fall-delay: 4.018s;
+  --star-tail-length: 6.82em;
+  --top-offset: 26.56vh;
+  --fall-duration: 6.341s;
+  --fall-delay: 1.396s;
 }
 .star:nth-child(31) {
-  --star-tail-length: 5.8em;
-  --top-offset: 6.37vh;
-  --fall-duration: 7.181s;
-  --fall-delay: 9.423s;
+  --star-tail-length: 5.02em;
+  --top-offset: 22.87vh;
+  --fall-duration: 7.166s;
+  --fall-delay: 1.149s;
 }
 .star:nth-child(32) {
-  --star-tail-length: 6.56em;
-  --top-offset: 43.12vh;
-  --fall-duration: 6.444s;
-  --fall-delay: 6.002s;
+  --star-tail-length: 6.7em;
+  --top-offset: 20.92vh;
+  --fall-duration: 11.455s;
+  --fall-delay: 3.952s;
 }
 .star:nth-child(33) {
-  --star-tail-length: 6.54em;
-  --top-offset: 90.15vh;
-  --fall-duration: 9.42s;
-  --fall-delay: 8.803s;
+  --star-tail-length: 5.61em;
+  --top-offset: 69.61vh;
+  --fall-duration: 9.258s;
+  --fall-delay: 0.282s;
 }
 .star:nth-child(34) {
-  --star-tail-length: 5.72em;
-  --top-offset: 62.59vh;
-  --fall-duration: 7.941s;
-  --fall-delay: 9.158s;
+  --star-tail-length: 6.93em;
+  --top-offset: 99.38vh;
+  --fall-duration: 7.722s;
+  --fall-delay: 4.67s;
 }
 .star:nth-child(35) {
-  --star-tail-length: 5.4em;
-  --top-offset: 28.57vh;
-  --fall-duration: 10.893s;
-  --fall-delay: 1.808s;
+  --star-tail-length: 7.35em;
+  --top-offset: 97.95vh;
+  --fall-duration: 6.717s;
+  --fall-delay: 7.21s;
 }
 .star:nth-child(36) {
-  --star-tail-length: 6.24em;
-  --top-offset: 66.18vh;
-  --fall-duration: 9.433s;
-  --fall-delay: 2.766s;
+  --star-tail-length: 6.52em;
+  --top-offset: 30.16vh;
+  --fall-duration: 6.816s;
+  --fall-delay: 2.431s;
 }
 .star:nth-child(37) {
-  --star-tail-length: 7.18em;
-  --top-offset: 20.72vh;
-  --fall-duration: 10.356s;
-  --fall-delay: 8.102s;
+  --star-tail-length: 6.68em;
+  --top-offset: 5.56vh;
+  --fall-duration: 10.732s;
+  --fall-delay: 9.849s;
 }
 .star:nth-child(38) {
-  --star-tail-length: 6.17em;
-  --top-offset: 85.93vh;
-  --fall-duration: 11.928s;
-  --fall-delay: 1.511s;
+  --star-tail-length: 7.49em;
+  --top-offset: 62.99vh;
+  --fall-duration: 10.334s;
+  --fall-delay: 7.124s;
 }
 .star:nth-child(39) {
-  --star-tail-length: 5.67em;
-  --top-offset: 38.13vh;
-  --fall-duration: 10.932s;
-  --fall-delay: 4.007s;
+  --star-tail-length: 6.33em;
+  --top-offset: 47.66vh;
+  --fall-duration: 10.986s;
+  --fall-delay: 2.016s;
 }
 .star:nth-child(40) {
-  --star-tail-length: 6.49em;
-  --top-offset: 46.83vh;
-  --fall-duration: 6.113s;
-  --fall-delay: 3.911s;
+  --star-tail-length: 6.19em;
+  --top-offset: 97.19vh;
+  --fall-duration: 11.392s;
+  --fall-delay: 0.71s;
 }
 .star:nth-child(41) {
-  --star-tail-length: 6.66em;
-  --top-offset: 58.07vh;
-  --fall-duration: 7.094s;
-  --fall-delay: 1.362s;
+  --star-tail-length: 6.98em;
+  --top-offset: 59.83vh;
+  --fall-duration: 9.36s;
+  --fall-delay: 2.237s;
 }
 .star:nth-child(42) {
-  --star-tail-length: 5.67em;
-  --top-offset: 15.23vh;
-  --fall-duration: 8.561s;
-  --fall-delay: 5.037s;
+  --star-tail-length: 5.36em;
+  --top-offset: 78.18vh;
+  --fall-duration: 11.011s;
+  --fall-delay: 4.946s;
 }
 .star:nth-child(43) {
-  --star-tail-length: 6.23em;
-  --top-offset: 75.17vh;
-  --fall-duration: 9.051s;
-  --fall-delay: 1.72s;
+  --star-tail-length: 7.07em;
+  --top-offset: 7.66vh;
+  --fall-duration: 10.34s;
+  --fall-delay: 9.84s;
 }
 .star:nth-child(44) {
-  --star-tail-length: 6.31em;
-  --top-offset: 5.45vh;
-  --fall-duration: 10.321s;
-  --fall-delay: 0.706s;
+  --star-tail-length: 5.35em;
+  --top-offset: 78.89vh;
+  --fall-duration: 9.936s;
+  --fall-delay: 6.73s;
 }
 .star:nth-child(45) {
-  --star-tail-length: 5.23em;
-  --top-offset: 81.27vh;
-  --fall-duration: 11.488s;
-  --fall-delay: 2.377s;
+  --star-tail-length: 7.05em;
+  --top-offset: 18.48vh;
+  --fall-duration: 10.98s;
+  --fall-delay: 4.958s;
 }
 .star:nth-child(46) {
-  --star-tail-length: 5.85em;
-  --top-offset: 11.59vh;
-  --fall-duration: 10.492s;
-  --fall-delay: 6.432s;
+  --star-tail-length: 6.38em;
+  --top-offset: 43.33vh;
+  --fall-duration: 6.604s;
+  --fall-delay: 2.505s;
 }
 .star:nth-child(47) {
-  --star-tail-length: 6.13em;
-  --top-offset: 84.41vh;
-  --fall-duration: 6.193s;
-  --fall-delay: 8.736s;
+  --star-tail-length: 5.2em;
+  --top-offset: 0.92vh;
+  --fall-duration: 10.525s;
+  --fall-delay: 7.45s;
 }
 .star:nth-child(48) {
-  --star-tail-length: 6.16em;
-  --top-offset: 73.93vh;
-  --fall-duration: 7.159s;
-  --fall-delay: 5.155s;
+  --star-tail-length: 5.23em;
+  --top-offset: 8.03vh;
+  --fall-duration: 9.413s;
+  --fall-delay: 3.416s;
 }
 .star:nth-child(49) {
-  --star-tail-length: 7.06em;
-  --top-offset: 66.43vh;
-  --fall-duration: 9.142s;
-  --fall-delay: 7.505s;
+  --star-tail-length: 5.78em;
+  --top-offset: 19.38vh;
+  --fall-duration: 8.392s;
+  --fall-delay: 8.03s;
 }
 .star:nth-child(50) {
-  --star-tail-length: 5.68em;
-  --top-offset: 62.59vh;
-  --fall-duration: 7.309s;
-  --fall-delay: 0.781s;
+  --star-tail-length: 6.45em;
+  --top-offset: 84.7vh;
+  --fall-duration: 10.873s;
+  --fall-delay: 0.589s;
 }
 .star::before, .star::after {
   position: absolute;
