adicionando recuperação de senha e corrigindo background color dos formulários

--- a/Application/public/assets/css/cadastro.scss
+++ b/Application/public/assets/css/cadastro.scss
@@ -6,7 +6,7 @@
 // /*gerais*/
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, blue 0%, #0c0d13 100%);
+  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
   overflow: hidden;
 }
 
