--- a/Application/public/assets/css/cadastro.css
+++ b/Application/public/assets/css/cadastro.css
@@ -1,6 +1,6 @@
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, blue 0%, #0c0d13 100%);
+  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
   overflow: hidden;
 }
 
