--- a/Application/public/assets/css/testeblades.scss
+++ b/Application/public/assets/css/testeblades.scss
@@ -75,85 +75,74 @@
   }
   // input de email
   /* From Uiverse.io by AbanoubMagdy1 */ 
-.wave-group {
-  position: relative;
-}
-
-.wave-group .input {
-  font-size: 16px;
-  padding: 10px 10px 10px 5px;
-  display: block;
-  width: 230px;
-  border: none;
-  border-bottom: 1px solid #515151;
-  background: transparent;
-}
-
-.wave-group .input:focus {
-  outline: none;
-}
-
-.wave-group .label-email {
-  color: #999;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 85px;
-  top: 10px;
-  display: flex;
-}
-
-.wave-group .label-char {
-  transition: 0.2s ease all;
-  transition-delay: calc(var(--index) * .05s);
-}
-
-.wave-group .input:focus ~ label .label-char,
-.wave-group .input:valid ~ label .label-char {
-  transform: translateY(-35px);
-  font-size: 14px;
-  color: #5264AE;
-}
-
-.wave-group .bar {
-  position: relative;
-  display: block;
-  width: 230px;
-}
-
-.wave-group .bar:before,.wave-group .bar:after {
-  content: '';
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #5264AE;
-  transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  -webkit-transition: 0.2s ease all;
-}
-
-.wave-group .bar:before {
-  left: 50%;
-}
-
-.wave-group .bar:after {
-  right: 50%;
-}
-
-.wave-group .input:focus ~ .bar:before,
-.wave-group .input:focus ~ .bar:after {
-  width: 50%;
-}
-
-.label-email {
-  width: 60px;
-  height: 27px;
-}
+  .wave-group {
+    position: relative;
+  }
+  .wave-group .input {
+    font-size: 16px;
+    padding: 5px 10px 10px 5px;
+    display: block;
+    width: 230px;
+    border: none;
+    border-bottom: 1px solid #515151;
+    background: transparent;
+  }
+  .wave-group .input:focus {
+    outline: none;
+  }
+  .wave-group .label-email {
+    color: #999;
+    font-size: 18px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 85px;
+    top: 2px;
+    display: flex;
+  }
+  .wave-group .label-char {
+    transition: 0.2s ease all;
+    transition-delay: calc(var(--index) * .05s);
+  }
+  .wave-group .input:focus ~ label .label-char,
+  .wave-group .input:valid ~ label .label-char {
+    transform: translateY(-35px);
+    font-size: 14px;
+    color: #5264AE;
+  }
+  .wave-group .bar {
+    position: relative;
+    display: block;
+    width: 230px;
+  }
+  .wave-group .bar:before,.wave-group .bar:after {
+    content: '';
+    height: 2px;
+    width: 0;
+    bottom: 1px;
+    position: absolute;
+    background: #5264AE;
+    transition: 0.2s ease all;
+    -moz-transition: 0.2s ease all;
+    -webkit-transition: 0.2s ease all;
+  }
+  .wave-group .bar:before {
+    left: 50%;
+  }
+  .wave-group .bar:after {
+    right: 50%;
+  }
+  .wave-group .input:focus ~ .bar:before,
+  .wave-group .input:focus ~ .bar:after {
+    width: 50%;
+  }
+  .label-email {
+    width: 60px;
+    height: 27px;
+  }
 
   // input de arquivos
-  /* From Uiverse.io by Yaya12085 */ 
+ /* From Uiverse.io by Yaya12085 */ 
 .custum-file-upload {
   height: 120px!important;
   width: 200px!important;
@@ -179,7 +168,6 @@
 
 .custum-file-upload .icon svg {
   height: 40px;
-  fill: rgba(75, 85, 99, 1);
 }
 
 .custum-file-upload .text {
@@ -197,4 +185,17 @@
 
 .custum-file-upload input {
   display: none;
+}
+
+
+// efeitos do vue 
+.fade-enter-active {
+  transition: opacity 1s;
+}
+
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active no Vue 2 */ {
+  opacity: 0;
 }
