--- a/Application/public/assets/css/cadastro.css
+++ b/Application/public/assets/css/cadastro.css
@@ -1,58 +1,52 @@
+/* b47eb3 3d5a6c 5aa9e6 3bceac f8f7ff */
+.btn-virtual {
+  color: #0dcaf0;
+  background: transparent;
+  border-color: #0dcaf0;
+  border-radius: 2px;
+}
+
+.btn-virtual:hover {
+  color: #fff;
+  background: #fa0081;
+  border-color: #fff;
+  border-radius: 2px;
+}
+
+.btn-virtual:active {
+  color: #fd7e14;
+  background-color: #0a58ca;
+  border-color: #0a53be;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.btn-virtual:focus {
+  box-shadow: 49, 132, 253;
+}
+
+.swal2-popup {
+  border: 2px solid #716add; /* Espessura e cor da borda */
+  border-radius: 8px; /* Arredondamento da borda */
+}
+
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
-  overflow: hidden;
-}
-
-.login-card {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #e8e8e8;
-  box-shadow: 2px 2px 10px #ccc;
-  max-width: 100%;
-}
-
-.card-header {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.card-header .log {
-  margin: 0;
-  font-size: 24px;
-  color: black;
+  background: url("../img/svgs/backgroundForm.svg");
 }
 
 .form-group {
   margin-bottom: 15px;
+  margin-right: 15px;
 }
 
-label {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-button[type=button],
-button[type=submit] {
+button {
   width: 100%;
-  background-color: #333;
-  color: white;
   padding: 14px 20px;
   margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  border-radius: 10px;
 }
 
-button[type=button]:hover {
-  background-color: #ccc;
-  color: black;
-}
-
-button[type=submit]:hover {
+input[type=submit]:hover {
   background-color: #ccc;
   color: black;
 }
@@ -61,36 +55,67 @@ button[type=submit]:hover {
   display: none;
 }
 
-input {
-  margin: 5px;
-}
-
-#estados {
-  margin-top: 4px;
-  margin-right: 16px;
+/* From Uiverse.io by micaelgomestavares */
+.backgroundForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #010023;
+  border: #fa0081 2px solid;
+  box-shadow: #fa0081 5px;
+  color: #ecedec;
+  padding: 30px;
   width: 100%;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-#escolaridade {
-  margin-top: 4px;
-  margin-left: 4px;
-  width: 189px;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
+@media screen and (min-width: 600px) {
+  .backgroundForm {
+    width: 400px;
+  }
+}
+::-moz-placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-#estados {
-  margin-top: 4px;
-  margin-left: 4px;
-  width: 189px;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
+.input-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputForm {
+  border: 1.5px solid #fa0081;
+  border-radius: 10px;
+  height: 50px;
+  width: 46%;
+  display: flex;
+  align-items: center;
+  transition: 0.2s ease-in-out;
+}
+
+.inputForm02 {
+  border-radius: 10px;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+.inputForm02:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid #0d6efd;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
 }/*# sourceMappingURL=cadastro.css.map */
