--- a/Application/public/assets/css/cadastro.scss
+++ b/Application/public/assets/css/cadastro.scss
@@ -1,108 +1,27 @@
-// /*importações*/
-// @import './animações.scss';
-// @import './cores.scss';
-// @import 'utilities';
+@use './bootstrap/coresbootstrap.scss' as *;
 
 // /*gerais*/
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
-  overflow: hidden;
+  // background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
+  background: url('../img/svgs/backgroundForm.svg');
 }
 
 // /*main-----------------------------------------------------------------------------------------------------------*/
 
-
-// // .form-selecting {
-
-// //     --bs-form-select-bg-img: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e);
-// //     display: block;
-// //     width: 197px;
-// //     padding: 0.375rem 2.25rem 0.375rem 0.75rem;
-// //     font-size: 1rem;
-// //     font-weight: 400;
-// //     line-height: 1.5;
-// //     color: var(--bs-body-color);
-// //     -webkit-appearance: none;
-// //     -moz-appearance: none;
-// //     appearance: none;
-// //     background-color: var(--bs-body-bg);
-// //     background-image: var(--bs-form-select-bg-img),var(--bs-form-select-bg-icon,none);
-// //     background-repeat: no-repeat;
-// //     background-position: right 0.75rem center;
-// //     background-size: 16px 12px;
-// //     border: var(--bs-border-width) solid var(--bs-border-color);
-// //     border-radius: var(--bs-border-radius);
-// //     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-// // }
-
-// // svg {
-// //   display: none;
-// // }
-// // .navbar1 {
-// //   height: 200px;
-// // }
-
-.login-card {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #e8e8e8;
-  box-shadow: 2px 2px 10px #ccc;
-  max-width: 100%;
-}
-
-.card-header {
-  text-align: center;
-  margin-bottom: 20px
-}
-
-.card-header .log {
-  margin: 0;
-  font-size: 24px;
-  color: black;
-}
-
 .form-group {
   margin-bottom: 15px;
+  margin-right: 15px;
 }
 
-label {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-// input[type="text"],
-// input[type="password"] {
-//   width: 100%;
-//   padding: 12px 20px;
-//   font-size: 16px;
-//   border: 1px solid #ccc;
-//   border-radius: 4px;
-//   box-sizing: border-box;
-//   transition: 0.5s;
-// }
-
-button[type="button"],
-button[type="submit"] {
+button {
   width: 100%;
-  background-color: #333;
-  color: white;
   padding: 14px 20px;
   margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  border-radius: 10px;
 }
 
-button[type="button"]:hover {
-  background-color: #ccc;
-  color: black;
-}
-
-button[type="submit"]:hover {
+input[type="submit"]:hover {
   background-color: #ccc;
   color: black;
 }
@@ -111,35 +30,68 @@ button[type="submit"]:hover {
   display: none;
 }
 
-input {
-  margin: 5px;
-}
- #estados {
-  margin-top: 4px;
-  margin-right: 16px;
+ // -------------------------------------------------------------------------------------------------------------------------------------
+
+/* From Uiverse.io by micaelgomestavares */ 
+.backgroundForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: $v02;
+  border: $v01 2px solid;
+  box-shadow: $v01 5px;
+  color: #ecedec;
+  padding: 30px;
   width: 100%;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
- }
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
- #escolaridade {
-  margin-top: 4px;
-  margin-left: 4px;
-  width: 189px;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
- }
+@media screen and (min-width: 600px) {
+  .backgroundForm {
+    width: 400px;
+  }
+}
 
- #estados {
-  margin-top: 4px;
-  margin-left: 4px;
-  width: 189px;
-  padding: 3px 6px;
-  font-size: 16px;
-  box-sizing: border-box;
-  transition: 0.5s;
- }
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.input-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inputForm {
+  border: 1.5px solid $v01;
+  border-radius: 10px;
+  height: 50px;
+  width: 46%;
+  display: flex;
+  align-items: center;
+  transition: 0.2s ease-in-out;
+}
+
+.inputForm02 {
+  border-radius: 10px;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+
+.inputForm02:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid $blue;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+}
+
