--- a/Application/public/assets/css/home.css
+++ b/Application/public/assets/css/home.css
@@ -1,86 +1,57 @@
-footer {
-  height: 100%;
+/* b47eb3 3d5a6c 5aa9e6 3bceac f8f7ff */
+.btn-virtual {
+  color: #0dcaf0;
+  background: transparent;
+  border-color: #0dcaf0;
+  border-radius: 2px;
 }
 
-#container-perfil img {
-  border-radius: 190px;
-  width: 200px;
-  height: 210px;
+.btn-virtual:hover {
+  color: #fff;
+  background: #fa0081;
+  border-color: #fff;
+  border-radius: 2px;
 }
 
-.nav-btn {
-  border: none;
-  border-radius: 20px;
-  width: 120px;
-  height: 50px;
+.btn-virtual:active {
+  color: #fd7e14;
+  background-color: #0a58ca;
+  border-color: #0a53be;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
-.text-white label {
-  display: block;
-  position: relative;
-  left: 35px;
+.btn-virtual:focus {
+  box-shadow: 49, 132, 253;
 }
 
-.curso label {
-  display: block;
-  position: relative;
-  left: 50px;
+.swal2-popup {
+  border: 2px solid #716add; /* Espessura e cor da borda */
+  border-radius: 8px; /* Arredondamento da borda */
 }
 
-.livro label {
-  display: block;
-  position: relative;
-  left: 55px;
+html, body, main {
+  background-color: #010023;
+  overflow-x: hidden;
 }
 
-.temas label {
-  display: block;
-  position: relative;
-  left: 45px;
-}
-
-.nav-container {
-  border-radius: 20px;
-}
-
-.nav-container button, label {
-  width: 90px;
-  height: 70px;
-  display: block;
-  justify-content: center;
-  align-items: center;
-  margin: 10px;
-}
-
-.nav-container label {
-  position: relative;
-  right: 15px;
-}
-
-button {
-  border: none;
-  border-radius: 15px;
-  background: none;
-  color: white;
-  margin: 10px;
-}
-
-.nav-btn-sair {
-  border: none;
-  border-radius: 20px;
-  width: 200px;
-  height: 50px;
+#divheader {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
-  background-color: red;
+  flex-direction: row;
+  border-bottom: solid 1px #5aa9e6;
+  padding: 1em;
 }
 
-#btnsair:hover {
-  background-color: rgb(234, 124, 124);
+#addcard {
+  width: 20vh;
+  height: 20vh;
+  border: dotted 2px #5aa9e6;
+  color: #5aa9e6;
 }
 
-.modal {
-  background-color: rgba(0, 0, 0, 0.333);
+#addcard:hover {
+  scale: 1.05;
+  cursor: pointer;
 }/*# sourceMappingURL=home.css.map */
