--- a/Application/public/assets/css/login.css
+++ b/Application/public/assets/css/login.css
@@ -1,38 +1,37 @@
+/* b47eb3 3d5a6c 5aa9e6 3bceac f8f7ff */
+.btn-virtual {
+  color: #0dcaf0;
+  background: transparent;
+  border-color: #0dcaf0;
+  border-radius: 2px;
+}
+
+.btn-virtual:hover {
+  color: #fff;
+  background: #fa0081;
+  border-color: #fff;
+  border-radius: 2px;
+}
+
+.btn-virtual:active {
+  color: #fd7e14;
+  background-color: #0a58ca;
+  border-color: #0a53be;
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
+
+.btn-virtual:focus {
+  box-shadow: 49, 132, 253;
+}
+
+.swal2-popup {
+  border: 2px solid #716add; /* Espessura e cor da borda */
+  border-radius: 8px; /* Arredondamento da borda */
+}
+
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
-  /* overflow: hidden; */
-}
-
-.login-card {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #e8e8e8;
-  box-shadow: 2px 2px 10px #ccc;
-  max-width: 100%;
-}
-
-.card-header {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.card-header .log {
-  margin: 0;
-  font-size: 24px;
-  color: black;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  font-size: 18px;
-  margin-bottom: 5px;
+  background: url("../img/svgs/backgroundForm.svg");
 }
 
 input[type=email],
@@ -48,7 +47,7 @@ input[type=password] {
 
 button[type=submit] {
   width: 100%;
-  background-color: #333;
+  background-color: #0d6efd;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -60,4 +59,124 @@ button[type=submit] {
 input[type=submit]:hover {
   background-color: #ccc;
   color: black;
+}
+
+/* From Uiverse.io by micaelgomestavares */
+.backgroundForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #010023;
+  border: #fa0081 2px solid;
+  box-shadow: #fa0081 5px;
+  color: #ecedec;
+  padding: 30px;
+  width: 100%;
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+@media screen and (min-width: 600px) {
+  .backgroundForm {
+    width: 400px;
+  }
+}
+::-moz-placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.backgroundForm button {
+  align-self: flex-end;
+}
+
+.flex-column > label {
+  color: #151717;
+  font-weight: 600;
+}
+
+.inputForm {
+  border: 1.5px solid #fa0081;
+  border-radius: 10px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.inputForm02 {
+  margin-left: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 85%;
+  height: 100%;
+}
+
+.inputForm02:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid #0d6efd;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.flex-row > div > label {
+  font-size: 14px;
+  color: black;
+  font-weight: 400;
+}
+
+.span {
+  font-size: 14px;
+  margin-left: 5px;
+  color: #2d79f3;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.button-submit:hover {
+  background-color: #fa0081;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.btn {
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  gap: 10px;
+  border: 1px solid #ededef;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.btn:hover {
+  border: 1px solid #0d6efd;
+}
+
+.swal2-popup {
+  border: 2px solid #716add; /* Espessura e cor da borda */
+  border-radius: 8px; /* Arredondamento da borda */
 }/*# sourceMappingURL=login.css.map */
