--- a/Application/public/assets/css/login.scss
+++ b/Application/public/assets/css/login.scss
@@ -1,41 +1,11 @@
 // /*importações*/
 // @import './animações.scss';
+@use './bootstrap/coresbootstrap.scss' as *;
 
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
-  /* overflow: hidden; */
-}
-
-.login-card {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  background-color: #e8e8e8;
-  box-shadow: 2px 2px 10px #ccc;
-  max-width: 100%;
-}
-
-.card-header {
-  text-align: center;
-  margin-bottom: 20px
-}
-
-.card-header .log {
-  margin: 0;
-  font-size: 24px;
-  color: black;
-}
-
-.form-group {
-  margin-bottom: 15px;
-}
-
-label {
-  font-size: 18px;
-  margin-bottom: 5px;
+  // background: radial-gradient(ellipse at bottom, #0dcaf0 10%, #0c0d13 100%);
+  background: url('../img/svgs/backgroundForm.svg');
 }
 
 input[type="email"],
@@ -51,7 +21,7 @@ input[type="password"] {
 
 button[type="submit"] {
   width: 100%;
-  background-color: #333;
+  background-color: $blue;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -63,4 +33,125 @@ button[type="submit"] {
 input[type="submit"]:hover {
   background-color: #ccc;
   color: black;
+}
+
+// -------------------------------------------------------------------------------------------------------------------------------------
+
+/* From Uiverse.io by micaelgomestavares */ 
+.backgroundForm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: $v02;
+  border: $v01 2px solid;
+  box-shadow: $v01 5px;
+  color: #ecedec;
+  padding: 30px;
+  width: 100%;
+  border-radius: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@media screen and (min-width: 600px) {
+  .backgroundForm {
+    width: 400px;
+  }
+}
+
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.backgroundForm button {
+  align-self: flex-end;
+}
+
+.flex-column > label {
+  color: #151717;
+  font-weight: 600;
+}
+
+.inputForm {
+  border: 1.5px solid $v01;
+  border-radius: 10px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  transition: 0.2s ease-in-out;
+}
+
+.inputForm02 {
+  margin-left: 10px;
+  border-radius: 10px;
+  border: none;
+  width: 85%;
+  height: 100%;
+}
+
+.inputForm02:focus {
+  outline: none;
+}
+
+.inputForm:focus-within {
+  border: 1.5px solid $blue;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+
+.flex-row > div > label {
+  font-size: 14px;
+  color: black;
+  font-weight: 400;
+}
+
+.span {
+  font-size: 14px;
+  margin-left: 5px;
+  color: #2d79f3;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.button-submit:hover {
+  background-color: $v01;
+}
+
+.p {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin: 5px 0;
+}
+
+.btn {
+  margin-top: 10px;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  gap: 10px;
+  border: 1px solid #ededef;
+  background-color: white;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
+}
+
+.btn:hover {
+  border: 1px solid $blue;
+  ;
+}
+
+.swal2-popup {
+  border: 2px solid $indigo; /* Espessura e cor da borda */
+  border-radius: 8px; /* Arredondamento da borda */
 }
