implementação de composition api e refaturações

--- a/Application/public/assets/css/profile.scss
+++ b/Application/public/assets/css/profile.scss
@@ -3,6 +3,7 @@
 #divprofile {
     position: relative;
     left: 10vh;
+    top: 10vh;
     background-color: $gray-600;
     border: solid 2px $v05;
     h1 {
