--- a/Application/public/assets/css/header.css
+++ b/Application/public/assets/css/header.css
@@ -36,6 +36,9 @@
   flex-wrap: nowrap;
   align-items: center;
   overflow-y: hidden;
+  position: fixed;
+  z-index: 101;
+  width: 212vh;
 }
 
 #navheader .col-4 {
