--- a/Application/public/assets/css/header.scss
+++ b/Application/public/assets/css/header.scss
@@ -7,6 +7,9 @@
     flex-wrap: nowrap;
     align-items: center;
     overflow-y: hidden;
+    position: fixed;
+    z-index: 101;
+    width: 212vh;
 }
 
 #navheader .col-4 {
